trying to fix this issue

--- a/game_data/BOUNCY-BREAD-Xbox-One.yaml
+++ b/game_data/BOUNCY-BREAD-Xbox-One.yaml
@@ -3,46 +3,46 @@ Add On Achievements:
   Description: Complete level 9
   GS: '200'
   Guide: false
-  Number of Gamers: 80
-  Percentage of Gamers: 98%
-  Ratio: 1.55
-  TA: '311'
+  Number of Gamers: 173
+  Percentage of Gamers: 99%
+  Ratio: 1.28
+  TA: '256'
   Tags: []
 - Achievement Name: 11 levels completed
   Description: Complete level 11
   GS: '200'
   Guide: false
-  Number of Gamers: 80
-  Percentage of Gamers: 98%
-  Ratio: 1.55
-  TA: '311'
+  Number of Gamers: 173
+  Percentage of Gamers: 99%
+  Ratio: 1.28
+  TA: '256'
   Tags: []
 - Achievement Name: 12 levels completed
   Description: Complete level 12
   GS: '200'
   Guide: false
-  Number of Gamers: 80
-  Percentage of Gamers: 98%
-  Ratio: 1.55
-  TA: '311'
+  Number of Gamers: 173
+  Percentage of Gamers: 99%
+  Ratio: 1.28
+  TA: '256'
   Tags: []
 - Achievement Name: 13 levels completed
   Description: Complete level 13
   GS: '200'
   Guide: false
-  Number of Gamers: 80
-  Percentage of Gamers: 98%
-  Ratio: 1.55
-  TA: '311'
+  Number of Gamers: 173
+  Percentage of Gamers: 99%
+  Ratio: 1.28
+  TA: '256'
   Tags: []
 - Achievement Name: 14 levels completed
   Description: Complete level 14
   GS: '200'
   Guide: false
-  Number of Gamers: 80
-  Percentage of Gamers: 98%
-  Ratio: 1.55
-  TA: '311'
+  Number of Gamers: 173
+  Percentage of Gamers: 99%
+  Ratio: 1.28
+  TA: '256'
   Tags: []
 Base Completion Time:
 - 0.0
@@ -53,7 +53,7 @@ Base Game Achievements:
   Description: Complete level 1
   GS: '100'
   Guide: false
-  Number of Gamers: 423
+  Number of Gamers: 431
   Percentage of Gamers: 100%
   Ratio: 1.0
   TA: '100'
@@ -65,7 +65,7 @@ Base Game Achievements:
   Description: Complete level 2
   GS: '100'
   Guide: false
-  Number of Gamers: 421
+  Number of Gamers: 429
   Percentage of Gamers: 100%
   Ratio: 1.0
   TA: '100'
@@ -77,7 +77,7 @@ Base Game Achievements:
   Description: Complete level 5
   GS: '100'
   Guide: false
-  Number of Gamers: 413
+  Number of Gamers: 421
   Percentage of Gamers: 98%
   Ratio: 1.01
   TA: '101'
@@ -89,7 +89,7 @@ Base Game Achievements:
   Description: Complete level 10
   GS: '100'
   Guide: false
-  Number of Gamers: 396
+  Number of Gamers: 406
   Percentage of Gamers: 94%
   Ratio: 1.03
   TA: '103'
@@ -101,8 +101,8 @@ Base Game Achievements:
   Description: Complete level 15
   GS: '100'
   Guide: false
-  Number of Gamers: 387
-  Percentage of Gamers: 91%
+  Number of Gamers: 398
+  Percentage of Gamers: 92%
   Ratio: 1.04
   TA: '104'
   Tags:
@@ -113,7 +113,7 @@ Base Game Achievements:
   Description: Complete level 20
   GS: '100'
   Guide: false
-  Number of Gamers: 369
+  Number of Gamers: 376
   Percentage of Gamers: 87%
   Ratio: 1.07
   TA: '107'
@@ -125,10 +125,10 @@ Base Game Achievements:
   Description: Complete level 25
   GS: '100'
   Guide: false
-  Number of Gamers: 363
+  Number of Gamers: 370
   Percentage of Gamers: 86%
-  Ratio: 1.07
-  TA: '107'
+  Ratio: 1.08
+  TA: '108'
   Tags:
   - Offline Mode
   - Single Player
@@ -137,7 +137,7 @@ Base Game Achievements:
   Description: Complete level 30
   GS: '100'
   Guide: false
-  Number of Gamers: 359
+  Number of Gamers: 365
   Percentage of Gamers: 85%
   Ratio: 1.08
   TA: '108'
@@ -149,7 +149,7 @@ Base Game Achievements:
   Description: Complete level 35
   GS: '100'
   Guide: true
-  Number of Gamers: 355
+  Number of Gamers: 360
   Percentage of Gamers: 84%
   Ratio: 1.09
   TA: '109'
@@ -161,7 +161,7 @@ Base Game Achievements:
   Description: Complete level 40
   GS: '100'
   Guide: true
-  Number of Gamers: 355
+  Number of Gamers: 360
   Percentage of Gamers: 84%
   Ratio: 1.09
   TA: '109'
@@ -169,23 +169,23 @@ Base Game Achievements:
   - Offline Mode
   - Single Player
   - Main Storyline
-Base Ratio: 1.057
-Base TA: 2114
+Base Ratio: 1.056
+Base TA: 2112
 Delisted: false
 Developer: Yume Game Studio
 Game Name: Bouncy Bread (Xbox One)
 Genres: Platformer
 Install Size: 371.0
-Number of Completions: 78
-Number of Gamers: 423
+Number of Completions: 161
+Number of Gamers: 431
 Overall Completion Time:
 - 0.0
 - 1.5
 Overall GS: 3000
-Overall Ratio: 1.223
-Overall TA: 3669
+Overall Ratio: 1.1306666666666667
+Overall TA: 3392
 PDU: 0
-Percentage Completed: 18.44
+Percentage Completed: 37.35
 Publisher: Yume Game Studio
 Release Date: 28 March 2025
 Server Closure: false
@@ -195,10 +195,10 @@ Update Achievements:
   Description: Complete level 3
   GS: '200'
   Guide: false
-  Number of Gamers: 375
+  Number of Gamers: 384
   Percentage of Gamers: 89%
-  Ratio: 1.06
-  TA: '212'
+  Ratio: 1.05
+  TA: '211'
   Tags:
   - Offline Mode
   - Single Player
@@ -207,10 +207,10 @@ Update Achievements:
   Description: Complete level 4
   GS: '200'
   Guide: false
-  Number of Gamers: 372
+  Number of Gamers: 381
   Percentage of Gamers: 88%
   Ratio: 1.06
-  TA: '213'
+  TA: '212'
   Tags:
   - Offline Mode
   - Single Player
@@ -219,8 +219,8 @@ Update Achievements:
   Description: Complete level 6
   GS: '200'
   Guide: false
-  Number of Gamers: 370
-  Percentage of Gamers: 87%
+  Number of Gamers: 379
+  Percentage of Gamers: 88%
   Ratio: 1.06
   TA: '213'
   Tags:
@@ -231,10 +231,10 @@ Update Achievements:
   Description: Complete level 7
   GS: '200'
   Guide: false
-  Number of Gamers: 369
-  Percentage of Gamers: 87%
-  Ratio: 1.07
-  TA: '214'
+  Number of Gamers: 378
+  Percentage of Gamers: 88%
+  Ratio: 1.06
+  TA: '213'
   Tags:
   - Offline Mode
   - Single Player
@@ -243,7 +243,7 @@ Update Achievements:
   Description: Complete level 8
   GS: '200'
   Guide: false
-  Number of Gamers: 367
+  Number of Gamers: 376
   Percentage of Gamers: 87%
   Ratio: 1.07
   TA: '214'
