--- a/game_data/Bag-Hero.yaml
+++ b/game_data/Bag-Hero.yaml
@@ -8,10 +8,10 @@ Base Game Achievements:
   Description: Successfully Clear Terror Cavern Beginner Difficulty
   GS: '15'
   Guide: false
-  Number of Gamers: 73
-  Percentage of Gamers: 54%
-  Ratio: 1.36
-  TA: '20'
+  Number of Gamers: 83
+  Percentage of Gamers: 56%
+  Ratio: 1.32
+  TA: '19'
   Tags:
   - Offline Mode
   - Single Player
@@ -20,9 +20,9 @@ Base Game Achievements:
   Description: Successfully Clear Terror Cavern Normal Difficulty
   GS: '15'
   Guide: false
-  Number of Gamers: 127
-  Percentage of Gamers: 95%
-  Ratio: 1.02
+  Number of Gamers: 139
+  Percentage of Gamers: 94%
+  Ratio: 1.03
   TA: '15'
   Tags:
   - Offline Mode
@@ -32,10 +32,10 @@ Base Game Achievements:
   Description: Successfully Clear Terror Cavern Challenge Difficulty
   GS: '30'
   Guide: false
-  Number of Gamers: 89
-  Percentage of Gamers: 66%
-  Ratio: 1.22
-  TA: '36'
+  Number of Gamers: 95
+  Percentage of Gamers: 64%
+  Ratio: 1.23
+  TA: '37'
   Tags:
   - Offline Mode
   - Single Player
@@ -44,9 +44,9 @@ Base Game Achievements:
   Description: Successfully Clear Terror Cavern Hard Difficulty
   GS: '30'
   Guide: false
-  Number of Gamers: 58
+  Number of Gamers: 64
   Percentage of Gamers: 43%
-  Ratio: 1.52
+  Ratio: 1.5
   TA: '45'
   Tags:
   - Offline Mode
@@ -56,10 +56,10 @@ Base Game Achievements:
   Description: Successfully Clear Terror Cavern Hell Difficulty
   GS: '30'
   Guide: false
-  Number of Gamers: 40
-  Percentage of Gamers: 30%
-  Ratio: 1.83
-  TA: '54'
+  Number of Gamers: 48
+  Percentage of Gamers: 32%
+  Ratio: 1.73
+  TA: '52'
   Tags:
   - Offline Mode
   - Single Player
@@ -68,10 +68,10 @@ Base Game Achievements:
   Description: Successfully Clear Terror Cavern Below Hell Difficulty
   GS: '90'
   Guide: false
-  Number of Gamers: 28
-  Percentage of Gamers: 21%
-  Ratio: 2.18
-  TA: '196'
+  Number of Gamers: 39
+  Percentage of Gamers: 26%
+  Ratio: 1.92
+  TA: '173'
   Tags:
   - Offline Mode
   - Single Player
@@ -80,10 +80,10 @@ Base Game Achievements:
   Description: Successfully Clear Terror Cavern Impossible Difficulty
   GS: '90'
   Guide: false
-  Number of Gamers: 25
-  Percentage of Gamers: 19%
-  Ratio: 2.31
-  TA: '208'
+  Number of Gamers: 31
+  Percentage of Gamers: 21%
+  Ratio: 2.16
+  TA: '194'
   Tags:
   - Offline Mode
   - Single Player
@@ -92,10 +92,10 @@ Base Game Achievements:
   Description: Successfully Clear Even More Terrifying Cavern Beginner Difficulty
   GS: '15'
   Guide: false
-  Number of Gamers: 40
-  Percentage of Gamers: 30%
-  Ratio: 1.83
-  TA: '27'
+  Number of Gamers: 50
+  Percentage of Gamers: 34%
+  Ratio: 1.7
+  TA: '25'
   Tags:
   - Offline Mode
   - Single Player
@@ -104,10 +104,10 @@ Base Game Achievements:
   Description: Successfully Clear Even More Terrifying Cavern Normal Difficulty
   GS: '15'
   Guide: false
-  Number of Gamers: 40
-  Percentage of Gamers: 30%
-  Ratio: 1.83
-  TA: '27'
+  Number of Gamers: 51
+  Percentage of Gamers: 34%
+  Ratio: 1.68
+  TA: '25'
   Tags:
   - Offline Mode
   - Single Player
@@ -116,10 +116,10 @@ Base Game Achievements:
   Description: Successfully Clear Even More Terrifying Cavern Challenge Difficulty
   GS: '30'
   Guide: false
-  Number of Gamers: 42
-  Percentage of Gamers: 31%
-  Ratio: 1.78
-  TA: '53'
+  Number of Gamers: 49
+  Percentage of Gamers: 33%
+  Ratio: 1.72
+  TA: '51'
   Tags:
   - Offline Mode
   - Single Player
@@ -128,10 +128,10 @@ Base Game Achievements:
   Description: Successfully Clear Even More Terrifying Cavern Hard Difficulty
   GS: '30'
   Guide: false
-  Number of Gamers: 27
-  Percentage of Gamers: 20%
-  Ratio: 2.22
-  TA: '66'
+  Number of Gamers: 33
+  Percentage of Gamers: 22%
+  Ratio: 2.12
+  TA: '63'
   Tags:
   - Offline Mode
   - Single Player
@@ -140,10 +140,10 @@ Base Game Achievements:
   Description: Successfully Clear Even More Terrifying Cavern Hell Difficulty
   GS: '30'
   Guide: false
-  Number of Gamers: 20
-  Percentage of Gamers: 15%
-  Ratio: 2.58
-  TA: '77'
+  Number of Gamers: 26
+  Percentage of Gamers: 18%
+  Ratio: 2.4
+  TA: '72'
   Tags:
   - Offline Mode
   - Single Player
@@ -152,10 +152,10 @@ Base Game Achievements:
   Description: Successfully Clear Even More Terrifying Cavern Below Hell Difficulty
   GS: '90'
   Guide: false
-  Number of Gamers: 19
-  Percentage of Gamers: 14%
-  Ratio: 2.65
-  TA: '239'
+  Number of Gamers: 24
+  Percentage of Gamers: 16%
+  Ratio: 2.51
+  TA: '225'
   Tags:
   - Offline Mode
   - Single Player
@@ -164,10 +164,10 @@ Base Game Achievements:
   Description: Successfully Clear Even More Terrifying Cavern Impossible Difficulty
   GS: '90'
   Guide: false
-  Number of Gamers: 16
-  Percentage of Gamers: 12%
-  Ratio: 2.98
-  TA: '269'
+  Number of Gamers: 23
+  Percentage of Gamers: 16%
+  Ratio: 2.56
+  TA: '231'
   Tags:
   - Offline Mode
   - Single Player
@@ -176,9 +176,9 @@ Base Game Achievements:
   Description: Discover the Hidden Class [Terminator] in the Game
   GS: '30'
   Guide: false
-  Number of Gamers: 84
+  Number of Gamers: 93
   Percentage of Gamers: 63%
-  Ratio: 1.26
+  Ratio: 1.25
   TA: '37'
   Tags:
   - Offline Game Mode
@@ -187,9 +187,9 @@ Base Game Achievements:
   Description: Discover the Hidden Class [Magic Swordsman] in the Game
   GS: '30'
   Guide: false
-  Number of Gamers: 83
-  Percentage of Gamers: 62%
-  Ratio: 1.27
+  Number of Gamers: 90
+  Percentage of Gamers: 61%
+  Ratio: 1.26
   TA: '38'
   Tags:
   - Offline Game Mode
@@ -198,10 +198,10 @@ Base Game Achievements:
   Description: Discover the Hidden Class [Necromancer] in the Game
   GS: '30'
   Guide: false
-  Number of Gamers: 43
-  Percentage of Gamers: 32%
-  Ratio: 1.76
-  TA: '52'
+  Number of Gamers: 51
+  Percentage of Gamers: 34%
+  Ratio: 1.7
+  TA: '51'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -209,10 +209,10 @@ Base Game Achievements:
   Description: Discover the Hidden Class [Paladin] in the Game
   GS: '30'
   Guide: false
-  Number of Gamers: 44
+  Number of Gamers: 49
   Percentage of Gamers: 33%
-  Ratio: 1.74
-  TA: '52'
+  Ratio: 1.72
+  TA: '51'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -220,10 +220,10 @@ Base Game Achievements:
   Description: Discover the Hidden Class [Mecha Dragon Smith] in the Game
   GS: '30'
   Guide: false
-  Number of Gamers: 55
-  Percentage of Gamers: 41%
-  Ratio: 1.56
-  TA: '46'
+  Number of Gamers: 64
+  Percentage of Gamers: 43%
+  Ratio: 1.5
+  TA: '45'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -231,10 +231,10 @@ Base Game Achievements:
   Description: Discover the Hidden Class [Hunter] in the Game
   GS: '30'
   Guide: false
-  Number of Gamers: 92
-  Percentage of Gamers: 69%
-  Ratio: 1.2
-  TA: '36'
+  Number of Gamers: 103
+  Percentage of Gamers: 70%
+  Ratio: 1.19
+  TA: '35'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -242,32 +242,32 @@ Base Game Achievements:
   Description: Discover the Hidden Class [Cyber Maniac] in the Game
   GS: '30'
   Guide: false
-  Number of Gamers: 57
-  Percentage of Gamers: 43%
-  Ratio: 1.53
-  TA: '45'
+  Number of Gamers: 60
+  Percentage of Gamers: 41%
+  Ratio: 1.55
+  TA: '46'
   Tags:
   - Offline Game Mode
   - Single Player
 - Achievement Name: Shadow Dancer
   Description: Discover the Hidden Class [Shadow Dancer] in the Game
   GS: '30'
-  Guide: false
-  Number of Gamers: 45
-  Percentage of Gamers: 34%
-  Ratio: 1.74
-  TA: '52'
+  Guide: true
+  Number of Gamers: 54
+  Percentage of Gamers: 36%
+  Ratio: 1.65
+  TA: '49'
   Tags:
   - Offline Game Mode
   - Single Player
 - Achievement Name: Death Knight
   Description: Discover the Hidden Class [Death Knight] in the Game
   GS: '30'
-  Guide: false
-  Number of Gamers: 38
-  Percentage of Gamers: 28%
-  Ratio: 1.87
-  TA: '56'
+  Guide: true
+  Number of Gamers: 48
+  Percentage of Gamers: 32%
+  Ratio: 1.73
+  TA: '52'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -275,8 +275,8 @@ Base Game Achievements:
   Description: Kill 10 Bosses
   GS: '15'
   Guide: false
-  Number of Gamers: 105
-  Percentage of Gamers: 78%
+  Number of Gamers: 117
+  Percentage of Gamers: 79%
   Ratio: 1.12
   TA: '16'
   Tags:
@@ -287,10 +287,10 @@ Base Game Achievements:
   Description: Kill 100 Bosses
   GS: '30'
   Guide: false
-  Number of Gamers: 26
-  Percentage of Gamers: 19%
-  Ratio: 2.27
-  TA: '68'
+  Number of Gamers: 34
+  Percentage of Gamers: 23%
+  Ratio: 2.09
+  TA: '62'
   Tags:
   - Offline Mode
   - Single Player
@@ -299,10 +299,10 @@ Base Game Achievements:
   Description: Kill 100,000 Monsters
   GS: '15'
   Guide: false
-  Number of Gamers: 40
-  Percentage of Gamers: 30%
-  Ratio: 1.83
-  TA: '27'
+  Number of Gamers: 49
+  Percentage of Gamers: 33%
+  Ratio: 1.73
+  TA: '26'
   Tags:
   - Offline Mode
   - Single Player
@@ -311,10 +311,10 @@ Base Game Achievements:
   Description: Kill 200,000 Monsters
   GS: '30'
   Guide: false
-  Number of Gamers: 23
-  Percentage of Gamers: 17%
-  Ratio: 2.46
-  TA: '74'
+  Number of Gamers: 30
+  Percentage of Gamers: 20%
+  Ratio: 2.23
+  TA: '67'
   Tags:
   - Offline Mode
   - Single Player
@@ -323,10 +323,10 @@ Base Game Achievements:
   Description: Deal 5,000 Damage in One Hit on Challenge Difficulty or Above
   GS: '20'
   Guide: false
-  Number of Gamers: 49
-  Percentage of Gamers: 37%
-  Ratio: 1.65
-  TA: '33'
+  Number of Gamers: 56
+  Percentage of Gamers: 38%
+  Ratio: 1.6
+  TA: '32'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -334,7 +334,7 @@ Base Game Achievements:
   Description: Hold 1,000 Skill Points at Once on Challenge Difficulty or Above
   GS: '20'
   Guide: false
-  Number of Gamers: 77
+  Number of Gamers: 84
   Percentage of Gamers: 57%
   Ratio: 1.31
   TA: '26'
@@ -342,23 +342,23 @@ Base Game Achievements:
   - Offline Mode
   - Single Player
   - Difficulty Specific
-Base Ratio: 1.99
-Base TA: 1990
+Base Ratio: 1.86
+Base TA: 1860
 Delisted: false
 Developer: Happy Player
 Game Name: Bag Hero
 Genres: Turn Based, Dungeon Crawler
 Install Size: 1060.0
-Number of Completions: 15
-Number of Gamers: 134
+Number of Completions: 20
+Number of Gamers: 148
 Overall Completion Time:
 - 15
 - 16
 Overall GS: 1000
-Overall Ratio: 1.99
-Overall TA: 1990
+Overall Ratio: 1.86
+Overall TA: 1860
 PDU: 0
-Percentage Completed: 11.19
+Percentage Completed: 13.51
 Publisher: Happy Player
 Release Date: 20 June 2025
 Server Closure: false
