--- a/game_data/Crate-Fang-Xbox-One.yaml
+++ b/game_data/Crate-Fang-Xbox-One.yaml
@@ -3,46 +3,46 @@ Add On Achievements:
   Description: Push boxes 5 times
   GS: '200'
   Guide: false
-  Number of Gamers: 71
-  Percentage of Gamers: 90%
-  Ratio: 3.87
-  TA: '774'
+  Number of Gamers: 138
+  Percentage of Gamers: 98%
+  Ratio: 1.18
+  TA: '236'
   Tags: []
 - Achievement Name: Push boxes 10
   Description: Push boxes 10 times
   GS: '200'
   Guide: false
-  Number of Gamers: 71
-  Percentage of Gamers: 90%
-  Ratio: 3.87
-  TA: '774'
+  Number of Gamers: 138
+  Percentage of Gamers: 98%
+  Ratio: 1.18
+  TA: '236'
   Tags: []
 - Achievement Name: Push boxes 15
   Description: Push boxes 15 times
   GS: '200'
   Guide: false
-  Number of Gamers: 71
-  Percentage of Gamers: 90%
-  Ratio: 3.87
-  TA: '774'
+  Number of Gamers: 138
+  Percentage of Gamers: 98%
+  Ratio: 1.18
+  TA: '236'
   Tags: []
 - Achievement Name: Push boxes 20
   Description: Push boxes 20 times
   GS: '200'
   Guide: false
-  Number of Gamers: 71
-  Percentage of Gamers: 90%
-  Ratio: 3.87
-  TA: '774'
+  Number of Gamers: 138
+  Percentage of Gamers: 98%
+  Ratio: 1.18
+  TA: '236'
   Tags: []
 - Achievement Name: Push boxes 25
   Description: Push boxes 25 times
   GS: '200'
   Guide: false
-  Number of Gamers: 71
-  Percentage of Gamers: 90%
-  Ratio: 3.87
-  TA: '774'
+  Number of Gamers: 138
+  Percentage of Gamers: 98%
+  Ratio: 1.18
+  TA: '236'
   Tags: []
 Base Completion Time:
 - 0.0
@@ -53,7 +53,7 @@ Base Game Achievements:
   Description: Beat level 5
   GS: '100'
   Guide: false
-  Number of Gamers: 225
+  Number of Gamers: 235
   Percentage of Gamers: 98%
   Ratio: 1.0
   TA: '100'
@@ -65,7 +65,7 @@ Base Game Achievements:
   Description: Beat level 10
   GS: '100'
   Guide: false
-  Number of Gamers: 218
+  Number of Gamers: 228
   Percentage of Gamers: 95%
   Ratio: 1.02
   TA: '102'
@@ -77,8 +77,8 @@ Base Game Achievements:
   Description: Beat level 15
   GS: '100'
   Guide: false
-  Number of Gamers: 213
-  Percentage of Gamers: 93%
+  Number of Gamers: 224
+  Percentage of Gamers: 94%
   Ratio: 1.03
   TA: '103'
   Tags:
@@ -89,7 +89,7 @@ Base Game Achievements:
   Description: Beat level 20
   GS: '100'
   Guide: false
-  Number of Gamers: 210
+  Number of Gamers: 220
   Percentage of Gamers: 92%
   Ratio: 1.04
   TA: '104'
@@ -101,7 +101,7 @@ Base Game Achievements:
   Description: Beat level 25
   GS: '100'
   Guide: false
-  Number of Gamers: 208
+  Number of Gamers: 218
   Percentage of Gamers: 91%
   Ratio: 1.04
   TA: '104'
@@ -113,8 +113,8 @@ Base Game Achievements:
   Description: Beat level 30
   GS: '100'
   Guide: false
-  Number of Gamers: 208
-  Percentage of Gamers: 91%
+  Number of Gamers: 216
+  Percentage of Gamers: 90%
   Ratio: 1.04
   TA: '104'
   Tags:
@@ -125,8 +125,8 @@ Base Game Achievements:
   Description: Beat level 35
   GS: '100'
   Guide: false
-  Number of Gamers: 208
-  Percentage of Gamers: 91%
+  Number of Gamers: 216
+  Percentage of Gamers: 90%
   Ratio: 1.04
   TA: '104'
   Tags:
@@ -137,8 +137,8 @@ Base Game Achievements:
   Description: Beat level 40
   GS: '100'
   Guide: false
-  Number of Gamers: 208
-  Percentage of Gamers: 91%
+  Number of Gamers: 216
+  Percentage of Gamers: 90%
   Ratio: 1.04
   TA: '104'
   Tags:
@@ -149,8 +149,8 @@ Base Game Achievements:
   Description: Beat level 12
   GS: '100'
   Guide: false
-  Number of Gamers: 214
-  Percentage of Gamers: 93%
+  Number of Gamers: 225
+  Percentage of Gamers: 94%
   Ratio: 1.03
   TA: '103'
   Tags:
@@ -161,7 +161,7 @@ Base Game Achievements:
   Description: Beat level 27
   GS: '100'
   Guide: false
-  Number of Gamers: 208
+  Number of Gamers: 217
   Percentage of Gamers: 91%
   Ratio: 1.04
   TA: '104'
@@ -169,23 +169,23 @@ Base Game Achievements:
   - Offline Mode
   - Single Player
   - Main Storyline
-Base Ratio: 1.031
-Base TA: 2062
+Base Ratio: 1.03
+Base TA: 2060
 Delisted: false
 Developer: 2dragontails
 Game Name: Crate Fang (Xbox One)
 Genres: Puzzle
 Install Size: 410.0
-Number of Completions: 74
-Number of Gamers: 229
+Number of Completions: 129
+Number of Gamers: 239
 Overall Completion Time:
 - 0.0
 - 1.5
 Overall GS: 3000
-Overall Ratio: 1.9783333333333333
-Overall TA: 5935
+Overall Ratio: 1.08
+Overall TA: 3240
 PDU: 0
-Percentage Completed: 32.31
+Percentage Completed: 53.97
 Publisher: 2dragontails
 Release Date: 11 June 2025
 Server Closure: false
@@ -195,7 +195,7 @@ Update Achievements:
   Description: Beat level 2
   GS: '200'
   Guide: false
-  Number of Gamers: 225
+  Number of Gamers: 235
   Percentage of Gamers: 98%
   Ratio: 1.0
   TA: '201'
@@ -207,7 +207,7 @@ Update Achievements:
   Description: Beat level 7
   GS: '200'
   Guide: false
-  Number of Gamers: 220
+  Number of Gamers: 230
   Percentage of Gamers: 96%
   Ratio: 1.01
   TA: '203'
@@ -219,10 +219,10 @@ Update Achievements:
   Description: Beat level 16
   GS: '200'
   Guide: false
-  Number of Gamers: 212
+  Number of Gamers: 223
   Percentage of Gamers: 93%
   Ratio: 1.03
-  TA: '207'
+  TA: '206'
   Tags:
   - Offline Mode
   - Single Player
@@ -231,10 +231,10 @@ Update Achievements:
   Description: Beat level 21
   GS: '200'
   Guide: false
-  Number of Gamers: 209
-  Percentage of Gamers: 91%
+  Number of Gamers: 219
+  Percentage of Gamers: 92%
   Ratio: 1.04
-  TA: '209'
+  TA: '208'
   Tags:
   - Offline Mode
   - Single Player
@@ -243,7 +243,7 @@ Update Achievements:
   Description: Beat level 39
   GS: '200'
   Guide: false
-  Number of Gamers: 207
+  Number of Gamers: 215
   Percentage of Gamers: 90%
   Ratio: 1.05
   TA: '210'
