--- a/game_data/Dead-of-Darkness.yaml
+++ b/game_data/Dead-of-Darkness.yaml
@@ -8,8 +8,8 @@ Base Game Achievements:
   Description: Start your journey in Graham Manor
   GS: '10'
   Guide: false
-  Number of Gamers: 2
-  Percentage of Gamers: 100%
+  Number of Gamers: 4
+  Percentage of Gamers: 67%
   Ratio: 1.0
   TA: '10'
   Tags: []
@@ -18,63 +18,63 @@ Base Game Achievements:
   GS: '15'
   Guide: false
   Number of Gamers: 1
-  Percentage of Gamers: 50%
-  Ratio: 1.41
-  TA: '21'
+  Percentage of Gamers: 17%
+  Ratio: 2.0
+  TA: '30'
   Tags: []
 - Achievement Name: Plan Gone Wrong
   Description: Defeat Owen in the House of Always
   GS: '15'
   Guide: false
   Number of Gamers: 1
-  Percentage of Gamers: 50%
-  Ratio: 1.41
-  TA: '21'
+  Percentage of Gamers: 17%
+  Ratio: 2.0
+  TA: '30'
   Tags: []
 - Achievement Name: "I\u2019ll be safe in the basement..."
   Description: Survive the farmhouse assault
   GS: '15'
   Guide: false
   Number of Gamers: 1
-  Percentage of Gamers: 50%
-  Ratio: 1.41
-  TA: '21'
+  Percentage of Gamers: 17%
+  Ratio: 2.0
+  TA: '30'
   Tags: []
 - Achievement Name: No Squidding Around
   Description: Defeat Owen in the farmhouse basement
   GS: '15'
   Guide: false
   Number of Gamers: 1
-  Percentage of Gamers: 50%
-  Ratio: 1.41
-  TA: '21'
+  Percentage of Gamers: 17%
+  Ratio: 2.0
+  TA: '30'
   Tags: []
 - Achievement Name: Cutting Ties
   Description: Defeat Harry in Graham Memorial
   GS: '15'
   Guide: false
   Number of Gamers: 1
-  Percentage of Gamers: 50%
-  Ratio: 1.41
-  TA: '21'
+  Percentage of Gamers: 17%
+  Ratio: 2.0
+  TA: '30'
   Tags: []
 - Achievement Name: Claw-some Victory
   Description: Defeat Joseph in the cistern
   GS: '15'
   Guide: false
   Number of Gamers: 1
-  Percentage of Gamers: 50%
-  Ratio: 1.41
-  TA: '21'
+  Percentage of Gamers: 17%
+  Ratio: 2.0
+  TA: '30'
   Tags: []
 - Achievement Name: Who Turned Off the Light?
   Description: Re-Visit Graham Manor
   GS: '15'
   Guide: false
   Number of Gamers: 1
-  Percentage of Gamers: 50%
-  Ratio: 1.41
-  TA: '21'
+  Percentage of Gamers: 17%
+  Ratio: 2.0
+  TA: '30'
   Tags: []
 - Achievement Name: Nothing Gonna Stop Me
   Description: Survive the attack in Graham Manor attic
@@ -225,9 +225,9 @@ Base Game Achievements:
   GS: '15'
   Guide: false
   Number of Gamers: 1
-  Percentage of Gamers: 50%
-  Ratio: 1.41
-  TA: '21'
+  Percentage of Gamers: 17%
+  Ratio: 2.0
+  TA: '30'
   Tags: []
 - Achievement Name: Finest Boomstick
   Description: Max out the shotgun
@@ -288,16 +288,16 @@ Base Game Achievements:
   GS: '30'
   Guide: false
   Number of Gamers: 1
-  Percentage of Gamers: 50%
-  Ratio: 1.41
-  TA: '42'
+  Percentage of Gamers: 17%
+  Ratio: 2.0
+  TA: '60'
   Tags: []
 - Achievement Name: This Looks Important
   Description: Find your first clue
   GS: '15'
   Guide: false
-  Number of Gamers: 1
-  Percentage of Gamers: 50%
+  Number of Gamers: 2
+  Percentage of Gamers: 33%
   Ratio: 1.41
   TA: '21'
   Tags: []
@@ -306,16 +306,16 @@ Base Game Achievements:
   GS: '15'
   Guide: false
   Number of Gamers: 1
-  Percentage of Gamers: 50%
-  Ratio: 1.41
-  TA: '21'
+  Percentage of Gamers: 17%
+  Ratio: 2.0
+  TA: '30'
   Tags: []
 - Achievement Name: Look Out, It's a Monster!
   Description: Kill a Ghoul
   GS: '15'
   Guide: false
-  Number of Gamers: 1
-  Percentage of Gamers: 50%
+  Number of Gamers: 2
+  Percentage of Gamers: 33%
   Ratio: 1.41
   TA: '21'
   Tags: []
@@ -324,65 +324,65 @@ Base Game Achievements:
   GS: '15'
   Guide: false
   Number of Gamers: 1
-  Percentage of Gamers: 50%
-  Ratio: 1.41
-  TA: '21'
+  Percentage of Gamers: 17%
+  Ratio: 2.0
+  TA: '30'
   Tags: []
 - Achievement Name: Quick Claws, Quicker Reflexes
   Description: Kill a Ripper
   GS: '15'
   Guide: false
-  Number of Gamers: 0
-  Percentage of Gamers: NA
-  Ratio: NA
-  TA: '15'
+  Number of Gamers: 1
+  Percentage of Gamers: 17%
+  Ratio: 2.0
+  TA: '30'
   Tags: []
 - Achievement Name: Roadblock Removed
   Description: Kill a Terror
   GS: '15'
   Guide: false
   Number of Gamers: 1
-  Percentage of Gamers: 50%
-  Ratio: 1.41
-  TA: '21'
+  Percentage of Gamers: 17%
+  Ratio: 2.0
+  TA: '30'
   Tags: []
 - Achievement Name: Dinner Denied
   Description: Kill a Spider Glutton
   GS: '15'
   Guide: false
   Number of Gamers: 1
-  Percentage of Gamers: 50%
-  Ratio: 1.41
-  TA: '21'
+  Percentage of Gamers: 17%
+  Ratio: 2.0
+  TA: '30'
   Tags: []
 - Achievement Name: Quiet!
   Description: Kill a Screamer
   GS: '15'
   Guide: false
   Number of Gamers: 1
-  Percentage of Gamers: 50%
-  Ratio: 1.41
-  TA: '21'
+  Percentage of Gamers: 17%
+  Ratio: 2.0
+  TA: '30'
   Tags: []
-Base Ratio: 1.102
-Base TA: 1102
+Base Ratio: 1.252
+Base TA: 1252
 Delisted: false
 Developer: Retrofiction Games, eastasiasoft
 Game Name: Dead of Darkness
 Genres: Survival Horror
 Install Size: 1110.0
 Number of Completions: 0
-Number of Gamers: 2
+Number of Gamers: 6
 Overall Completion Time:
 - -1
 - -1
 Overall GS: 1000
-Overall Ratio: 1.102
-Overall TA: 1102
+Overall Ratio: 1.252
+Overall TA: 1252
 PDU: 0
 Percentage Completed: 0.0
 Publisher: eastasiasoft
-Release Date: Today
+Release Date: Yesterday
 Server Closure: false
 Site Rating: None
 Update Achievements: []
