--- a/game_data/Little-Nightmares-2-Enhanced-Edition.yaml
+++ b/game_data/Little-Nightmares-2-Enhanced-Edition.yaml
@@ -1,17 +1,17 @@
 Add On Achievements: []
 Base Completion Time:
-- 3
-- 4
+- 5
+- 6
 Base GS: 1000
 Base Game Achievements:
 - Achievement Name: Merciful feat
   Description: Tempting, so tempting...
   GS: '20'
   Guide: false
-  Number of Gamers: 8
-  Percentage of Gamers: 9%
-  Ratio: 3.02
-  TA: '60'
+  Number of Gamers: 22
+  Percentage of Gamers: 14%
+  Ratio: 2.7
+  TA: '54'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -19,9 +19,9 @@ Base Game Achievements:
   Description: What did you expect to see in there?
   GS: '20'
   Guide: false
-  Number of Gamers: 40
-  Percentage of Gamers: 45%
-  Ratio: 1.48
+  Number of Gamers: 75
+  Percentage of Gamers: 46%
+  Ratio: 1.45
   TA: '29'
   Tags:
   - Offline Game Mode
@@ -30,10 +30,10 @@ Base Game Achievements:
   Description: Not today!
   GS: '30'
   Guide: false
-  Number of Gamers: 28
-  Percentage of Gamers: 32%
-  Ratio: 1.74
-  TA: '52'
+  Number of Gamers: 49
+  Percentage of Gamers: 30%
+  Ratio: 1.79
+  TA: '53'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -41,10 +41,10 @@ Base Game Achievements:
   Description: "It would be clich\xE9 to collect them all."
   GS: '20'
   Guide: false
-  Number of Gamers: 9
-  Percentage of Gamers: 10%
-  Ratio: 3.48
-  TA: '69'
+  Number of Gamers: 21
+  Percentage of Gamers: 13%
+  Ratio: 2.77
+  TA: '55'
   Tags:
   - Offline Mode
   - Single Player
@@ -53,10 +53,10 @@ Base Game Achievements:
   Description: Relax, she heard you!
   GS: '20'
   Guide: false
-  Number of Gamers: 25
-  Percentage of Gamers: 28%
-  Ratio: 1.82
-  TA: '36'
+  Number of Gamers: 55
+  Percentage of Gamers: 34%
+  Ratio: 1.68
+  TA: '33'
   Tags:
   - Offline Mode
   - Single Player
@@ -65,10 +65,10 @@ Base Game Achievements:
   Description: Any other last requests?
   GS: '15'
   Guide: false
-  Number of Gamers: 8
-  Percentage of Gamers: 9%
-  Ratio: 3.48
-  TA: '52'
+  Number of Gamers: 20
+  Percentage of Gamers: 12%
+  Ratio: 2.84
+  TA: '42'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -76,10 +76,10 @@ Base Game Achievements:
   Description: It's all over now.
   GS: '60'
   Guide: false
-  Number of Gamers: 6
-  Percentage of Gamers: 7%
-  Ratio: 3.82
-  TA: '229'
+  Number of Gamers: 18
+  Percentage of Gamers: 11%
+  Ratio: 3.0
+  TA: '180'
   Tags:
   - Offline Mode
   - Single Player
@@ -89,10 +89,10 @@ Base Game Achievements:
   Description: Nothing of us remains anywhere. Bravo!
   GS: '75'
   Guide: false
-  Number of Gamers: 4
-  Percentage of Gamers: 5%
-  Ratio: 4.93
-  TA: '369'
+  Number of Gamers: 15
+  Percentage of Gamers: 9%
+  Ratio: 3.2
+  TA: '240'
   Tags:
   - Offline Mode
   - Single Player
@@ -101,10 +101,10 @@ Base Game Achievements:
   Description: Hats are very important to some people
   GS: '75'
   Guide: false
-  Number of Gamers: 4
-  Percentage of Gamers: 5%
-  Ratio: 4.93
-  TA: '369'
+  Number of Gamers: 13
+  Percentage of Gamers: 8%
+  Ratio: 3.44
+  TA: '258'
   Tags:
   - Offline Mode
   - Single Player
@@ -113,10 +113,10 @@ Base Game Achievements:
   Description: Perfect! It's so...you!
   GS: '15'
   Guide: false
-  Number of Gamers: 5
-  Percentage of Gamers: 6%
-  Ratio: 4.27
-  TA: '64'
+  Number of Gamers: 14
+  Percentage of Gamers: 9%
+  Ratio: 3.31
+  TA: '49'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -124,10 +124,10 @@ Base Game Achievements:
   Description: Hold tight and we'll be just fine
   GS: '30'
   Guide: false
-  Number of Gamers: 11
-  Percentage of Gamers: 12%
-  Ratio: 2.84
-  TA: '85'
+  Number of Gamers: 25
+  Percentage of Gamers: 15%
+  Ratio: 2.48
+  TA: '74'
   Tags:
   - Offline Mode
   - Single Player
@@ -136,10 +136,10 @@ Base Game Achievements:
   Description: Your life is now free of challenges. Congratulations.
   GS: '80'
   Guide: false
-  Number of Gamers: 4
-  Percentage of Gamers: 5%
-  Ratio: 4.93
-  TA: '394'
+  Number of Gamers: 13
+  Percentage of Gamers: 8%
+  Ratio: 3.44
+  TA: '275'
   Tags:
   - Offline Mode
   - Single Player
@@ -148,10 +148,10 @@ Base Game Achievements:
   Description: Are you sure you don't need any further ... treatments?
   GS: '30'
   Guide: false
-  Number of Gamers: 12
-  Percentage of Gamers: 14%
-  Ratio: 2.84
-  TA: '85'
+  Number of Gamers: 27
+  Percentage of Gamers: 17%
+  Ratio: 2.48
+  TA: '74'
   Tags:
   - Offline Mode
   - Single Player
@@ -160,10 +160,10 @@ Base Game Achievements:
   Description: There, you'll be much warmer now.
   GS: '15'
   Guide: false
-  Number of Gamers: 9
-  Percentage of Gamers: 10%
-  Ratio: 3.48
-  TA: '52'
+  Number of Gamers: 22
+  Percentage of Gamers: 14%
+  Ratio: 2.7
+  TA: '40'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -171,10 +171,10 @@ Base Game Achievements:
   Description: Movie night on the ward - all taken care of!
   GS: '30'
   Guide: false
-  Number of Gamers: 8
-  Percentage of Gamers: 9%
-  Ratio: 3.48
-  TA: '104'
+  Number of Gamers: 19
+  Percentage of Gamers: 12%
+  Ratio: 2.92
+  TA: '87'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -182,10 +182,10 @@ Base Game Achievements:
   Description: Plenty of snacks for a growing boy.
   GS: '15'
   Guide: false
-  Number of Gamers: 11
-  Percentage of Gamers: 12%
-  Ratio: 3.22
-  TA: '48'
+  Number of Gamers: 27
+  Percentage of Gamers: 17%
+  Ratio: 2.43
+  TA: '36'
   Tags:
   - Offline Mode
   - Single Player
@@ -194,10 +194,10 @@ Base Game Achievements:
   Description: I see through you...
   GS: '15'
   Guide: false
-  Number of Gamers: 8
-  Percentage of Gamers: 9%
-  Ratio: 3.48
-  TA: '52'
+  Number of Gamers: 22
+  Percentage of Gamers: 14%
+  Ratio: 2.7
+  TA: '40'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -205,10 +205,10 @@ Base Game Achievements:
   Description: Better to be safe than sorry.
   GS: '15'
   Guide: false
-  Number of Gamers: 12
-  Percentage of Gamers: 14%
-  Ratio: 3.02
-  TA: '45'
+  Number of Gamers: 27
+  Percentage of Gamers: 17%
+  Ratio: 2.48
+  TA: '37'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -216,10 +216,10 @@ Base Game Achievements:
   Description: Some holes are more picky than others
   GS: '30'
   Guide: false
-  Number of Gamers: 8
-  Percentage of Gamers: 9%
-  Ratio: 3.48
-  TA: '104'
+  Number of Gamers: 20
+  Percentage of Gamers: 12%
+  Ratio: 2.84
+  TA: '85'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -227,10 +227,10 @@ Base Game Achievements:
   Description: It's crueller to let him live.
   GS: '15'
   Guide: false
-  Number of Gamers: 7
-  Percentage of Gamers: 8%
-  Ratio: 3.48
-  TA: '52'
+  Number of Gamers: 17
+  Percentage of Gamers: 10%
+  Ratio: 3.0
+  TA: '45'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -238,10 +238,10 @@ Base Game Achievements:
   Description: Nothing of us remains in the hospital
   GS: '30'
   Guide: false
-  Number of Gamers: 7
-  Percentage of Gamers: 8%
-  Ratio: 3.82
-  TA: '114'
+  Number of Gamers: 18
+  Percentage of Gamers: 11%
+  Ratio: 3.0
+  TA: '90'
   Tags:
   - Offline Mode
   - Single Player
@@ -250,10 +250,10 @@ Base Game Achievements:
   Description: Life in the big city is all over.
   GS: '30'
   Guide: false
-  Number of Gamers: 7
-  Percentage of Gamers: 8%
-  Ratio: 3.82
-  TA: '114'
+  Number of Gamers: 19
+  Percentage of Gamers: 12%
+  Ratio: 2.92
+  TA: '87'
   Tags:
   - Offline Mode
   - Single Player
@@ -262,10 +262,10 @@ Base Game Achievements:
   Description: You punctuated someone's day. Maybe they'll notice!
   GS: '30'
   Guide: false
-  Number of Gamers: 4
-  Percentage of Gamers: 5%
-  Ratio: 4.93
-  TA: '147'
+  Number of Gamers: 14
+  Percentage of Gamers: 9%
+  Ratio: 3.31
+  TA: '99'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -273,10 +273,10 @@ Base Game Achievements:
   Description: Hello, have we met?
   GS: '30'
   Guide: false
-  Number of Gamers: 4
-  Percentage of Gamers: 5%
-  Ratio: 4.93
-  TA: '147'
+  Number of Gamers: 15
+  Percentage of Gamers: 9%
+  Ratio: 3.2
+  TA: '96'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -284,10 +284,10 @@ Base Game Achievements:
   Description: Nothing of us remains in the pale city
   GS: '30'
   Guide: false
-  Number of Gamers: 4
-  Percentage of Gamers: 5%
-  Ratio: 4.93
-  TA: '147'
+  Number of Gamers: 15
+  Percentage of Gamers: 9%
+  Ratio: 3.2
+  TA: '96'
   Tags:
   - Offline Mode
   - Single Player
@@ -296,10 +296,10 @@ Base Game Achievements:
   Description: Best days of our short, terrible life.
   GS: '30'
   Guide: false
-  Number of Gamers: 18
-  Percentage of Gamers: 20%
-  Ratio: 2.36
-  TA: '71'
+  Number of Gamers: 39
+  Percentage of Gamers: 24%
+  Ratio: 2.06
+  TA: '62'
   Tags:
   - Offline Mode
   - Single Player
@@ -308,10 +308,10 @@ Base Game Achievements:
   Description: Unorthodox, but they all count!
   GS: '15'
   Guide: false
-  Number of Gamers: 11
-  Percentage of Gamers: 12%
-  Ratio: 2.7
-  TA: '40'
+  Number of Gamers: 27
+  Percentage of Gamers: 17%
+  Ratio: 2.43
+  TA: '36'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -319,10 +319,10 @@ Base Game Achievements:
   Description: My, what a curious song you play!
   GS: '15'
   Guide: false
-  Number of Gamers: 13
-  Percentage of Gamers: 15%
-  Ratio: 2.7
-  TA: '40'
+  Number of Gamers: 30
+  Percentage of Gamers: 19%
+  Ratio: 2.3
+  TA: '34'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -330,10 +330,10 @@ Base Game Achievements:
   Description: Creative, efficient, brutal. Top of the class!
   GS: '30'
   Guide: false
-  Number of Gamers: 10
-  Percentage of Gamers: 11%
-  Ratio: 2.7
-  TA: '81'
+  Number of Gamers: 25
+  Percentage of Gamers: 15%
+  Ratio: 2.53
+  TA: '75'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -341,10 +341,10 @@ Base Game Achievements:
   Description: Rebellion at its finest!
   GS: '15'
   Guide: false
-  Number of Gamers: 12
-  Percentage of Gamers: 14%
-  Ratio: 2.57
-  TA: '38'
+  Number of Gamers: 26
+  Percentage of Gamers: 16%
+  Ratio: 2.48
+  TA: '37'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -352,10 +352,10 @@ Base Game Achievements:
   Description: You never know when you need protection from the elements.
   GS: '15'
   Guide: false
-  Number of Gamers: 19
-  Percentage of Gamers: 22%
-  Ratio: 2.2
-  TA: '33'
+  Number of Gamers: 40
+  Percentage of Gamers: 25%
+  Ratio: 2.04
+  TA: '30'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -363,10 +363,10 @@ Base Game Achievements:
   Description: Nothing of us remains at the school
   GS: '30'
   Guide: false
-  Number of Gamers: 7
-  Percentage of Gamers: 8%
-  Ratio: 3.48
-  TA: '104'
+  Number of Gamers: 22
+  Percentage of Gamers: 14%
+  Ratio: 2.7
+  TA: '81'
   Tags:
   - Offline Mode
   - Single Player
@@ -375,10 +375,10 @@ Base Game Achievements:
   Description: Nature is a terrifying thing.
   GS: '30'
   Guide: false
-  Number of Gamers: 64
-  Percentage of Gamers: 73%
-  Ratio: 1.14
-  TA: '34'
+  Number of Gamers: 125
+  Percentage of Gamers: 77%
+  Ratio: 1.12
+  TA: '33'
   Tags:
   - Offline Mode
   - Single Player
@@ -387,9 +387,9 @@ Base Game Achievements:
   Description: It's not murder if they're bad people...is it?
   GS: '15'
   Guide: false
-  Number of Gamers: 25
-  Percentage of Gamers: 28%
-  Ratio: 1.78
+  Number of Gamers: 52
+  Percentage of Gamers: 32%
+  Ratio: 1.75
   TA: '26'
   Tags:
   - Offline Game Mode
@@ -398,34 +398,34 @@ Base Game Achievements:
   Description: Nothing of us remains in the wilderness
   GS: '30'
   Guide: false
-  Number of Gamers: 15
-  Percentage of Gamers: 17%
-  Ratio: 2.28
-  TA: '68'
+  Number of Gamers: 32
+  Percentage of Gamers: 20%
+  Ratio: 2.22
+  TA: '66'
   Tags:
   - Offline Mode
   - Single Player
   - Collectable
-Base Ratio: 3.554
-Base TA: 3554
+Base Ratio: 2.734
+Base TA: 2734
 Delisted: false
 Developer: Tarsier Studios, Supermassive Games
 Game Name: Little Nightmares II Enhanced Edition (Windows)
 Genres: Puzzle, Stealth, Platformer
 Install Size: 12170.0
-Number of Completions: 4
-Number of Gamers: 88
+Number of Completions: 14
+Number of Gamers: 162
 Overall Completion Time:
-- 3
-- 4
+- 5
+- 6
 Overall GS: 1000
-Overall Ratio: 3.554
-Overall TA: 3554
+Overall Ratio: 2.734
+Overall TA: 2734
 PDU: 0
-Percentage Completed: 4.55
+Percentage Completed: 8.64
 Publisher: Bandai Namco Entertainment
-Release Date: Yesterday
+Release Date: 01 July 2025
 Server Closure: false
-Site Rating: 5.0
+Site Rating: 4.5
 Update Achievements: []
 Walkthrough: false
