--- a/game_data/Lonely-Mountains-Snow-Riders.yaml
+++ b/game_data/Lonely-Mountains-Snow-Riders.yaml
@@ -8,7 +8,7 @@ Base Game Achievements:
   Description: Unlock a second pair of skis
   GS: '10'
   Guide: true
-  Number of Gamers: 8728
+  Number of Gamers: 8740
   Percentage of Gamers: 18%
   Ratio: 2.32
   TA: '23'
@@ -19,7 +19,7 @@ Base Game Achievements:
   Description: Unlock a third pair of skis
   GS: '20'
   Guide: true
-  Number of Gamers: 4648
+  Number of Gamers: 4656
   Percentage of Gamers: 10%
   Ratio: 3.18
   TA: '63'
@@ -30,7 +30,7 @@ Base Game Achievements:
   Description: Unlock a fourth pair of skis
   GS: '40'
   Guide: true
-  Number of Gamers: 2957
+  Number of Gamers: 2962
   Percentage of Gamers: 6%
   Ratio: 3.99
   TA: '159'
@@ -41,7 +41,7 @@ Base Game Achievements:
   Description: Unlock a fifth pair of skis
   GS: '80'
   Guide: true
-  Number of Gamers: 2072
+  Number of Gamers: 2074
   Percentage of Gamers: 4%
   Ratio: 4.77
   TA: '381'
@@ -54,9 +54,9 @@ Base Game Achievements:
   Description: Find one resting spot
   GS: '20'
   Guide: true
-  Number of Gamers: 6290
+  Number of Gamers: 6300
   Percentage of Gamers: 13%
-  Ratio: 2.74
+  Ratio: 2.73
   TA: '54'
   Tags:
   - Online/Offline
@@ -80,7 +80,7 @@ Base Game Achievements:
   Description: Find all resting places on Monte Guanaco
   GS: '25'
   Guide: true
-  Number of Gamers: 1057
+  Number of Gamers: 1058
   Percentage of Gamers: 2%
   Ratio: 6.68
   TA: '167'
@@ -93,9 +93,9 @@ Base Game Achievements:
   Description: Find all resting places on Sierra Gelida
   GS: '25'
   Guide: true
-  Number of Gamers: 973
+  Number of Gamers: 974
   Percentage of Gamers: 2%
-  Ratio: 6.97
+  Ratio: 6.96
   TA: '174'
   Tags:
   - Online/Offline
@@ -106,7 +106,7 @@ Base Game Achievements:
   Description: Cross your first finish line
   GS: '10'
   Guide: true
-  Number of Gamers: 29759
+  Number of Gamers: 29811
   Percentage of Gamers: 63%
   Ratio: 1.25
   TA: '12'
@@ -118,7 +118,7 @@ Base Game Achievements:
   Description: Unlock Monte Guanaco
   GS: '20'
   Guide: true
-  Number of Gamers: 6134
+  Number of Gamers: 6140
   Percentage of Gamers: 13%
   Ratio: 2.77
   TA: '55'
@@ -129,7 +129,7 @@ Base Game Achievements:
   Description: Unlock Sierra Gelida
   GS: '30'
   Guide: false
-  Number of Gamers: 3704
+  Number of Gamers: 3707
   Percentage of Gamers: 8%
   Ratio: 3.57
   TA: '107'
@@ -140,7 +140,7 @@ Base Game Achievements:
   Description: Finish all Blue Slope Challenges on Tannenstein
   GS: '25'
   Guide: true
-  Number of Gamers: 3006
+  Number of Gamers: 3009
   Percentage of Gamers: 6%
   Ratio: 3.96
   TA: '99'
@@ -151,9 +151,9 @@ Base Game Achievements:
   Description: Finish all Black Slope Challenges on Tannenstein
   GS: '30'
   Guide: true
-  Number of Gamers: 2022
+  Number of Gamers: 2026
   Percentage of Gamers: 4%
-  Ratio: 4.83
+  Ratio: 4.82
   TA: '144'
   Tags:
   - Offline Game Mode
@@ -162,7 +162,7 @@ Base Game Achievements:
   Description: Finish all Blue Slope Challenges on Monte Guanaco
   GS: '25'
   Guide: true
-  Number of Gamers: 1918
+  Number of Gamers: 1920
   Percentage of Gamers: 4%
   Ratio: 4.96
   TA: '124'
@@ -173,7 +173,7 @@ Base Game Achievements:
   Description: Finish all Black Slope Challenges on Monte Guanaco
   GS: '30'
   Guide: true
-  Number of Gamers: 1515
+  Number of Gamers: 1517
   Percentage of Gamers: 3%
   Ratio: 5.58
   TA: '167'
@@ -184,9 +184,9 @@ Base Game Achievements:
   Description: Finish all Blue Slope Challenges on Sierra Gelida
   GS: '25'
   Guide: true
-  Number of Gamers: 1565
+  Number of Gamers: 1568
   Percentage of Gamers: 3%
-  Ratio: 5.48
+  Ratio: 5.49
   TA: '137'
   Tags:
   - Offline Game Mode
@@ -195,9 +195,9 @@ Base Game Achievements:
   Description: Finish all Black Slope Challenges on Sierra Gelida
   GS: '30'
   Guide: true
-  Number of Gamers: 1363
+  Number of Gamers: 1366
   Percentage of Gamers: 3%
-  Ratio: 5.87
+  Ratio: 5.88
   TA: '176'
   Tags:
   - Offline Game Mode
@@ -206,7 +206,7 @@ Base Game Achievements:
   Description: Unlock ghost mode for the first time
   GS: '15'
   Guide: true
-  Number of Gamers: 4576
+  Number of Gamers: 4583
   Percentage of Gamers: 10%
   Ratio: 3.21
   TA: '48'
@@ -217,7 +217,7 @@ Base Game Achievements:
   Description: Beat your best time im ghost mode
   GS: '50'
   Guide: true
-  Number of Gamers: 1660
+  Number of Gamers: 1663
   Percentage of Gamers: 4%
   Ratio: 5.33
   TA: '266'
@@ -228,7 +228,7 @@ Base Game Achievements:
   Description: Ride one Trail in Zen Mode
   GS: '10'
   Guide: true
-  Number of Gamers: 12832
+  Number of Gamers: 12863
   Percentage of Gamers: 27%
   Ratio: 1.91
   TA: '19'
@@ -239,9 +239,9 @@ Base Game Achievements:
   Description: Jump for 4 seconds
   GS: '15'
   Guide: true
-  Number of Gamers: 5351
+  Number of Gamers: 5359
   Percentage of Gamers: 11%
-  Ratio: 2.97
+  Ratio: 2.96
   TA: '44'
   Tags:
   - Online/Offline
@@ -251,7 +251,7 @@ Base Game Achievements:
   Description: Ride Backwards for 200 meters
   GS: '15'
   Guide: true
-  Number of Gamers: 6417
+  Number of Gamers: 6430
   Percentage of Gamers: 14%
   Ratio: 2.71
   TA: '40'
@@ -263,7 +263,7 @@ Base Game Achievements:
   Description: Ride 90 seconds without braking
   GS: '15'
   Guide: true
-  Number of Gamers: 4262
+  Number of Gamers: 4269
   Percentage of Gamers: 9%
   Ratio: 3.32
   TA: '49'
@@ -275,7 +275,7 @@ Base Game Achievements:
   Description: Reach a speed of 35 m/s
   GS: '15'
   Guide: true
-  Number of Gamers: 2877
+  Number of Gamers: 2880
   Percentage of Gamers: 6%
   Ratio: 4.05
   TA: '60'
@@ -287,9 +287,9 @@ Base Game Achievements:
   Description: Ride on Water for 3 seconds
   GS: '15'
   Guide: true
-  Number of Gamers: 3106
+  Number of Gamers: 3110
   Percentage of Gamers: 7%
-  Ratio: 3.9
+  Ratio: 3.89
   TA: '58'
   Tags:
   - Online/Offline
@@ -299,7 +299,7 @@ Base Game Achievements:
   Description: Land a 360 Spin successfully
   GS: '10'
   Guide: true
-  Number of Gamers: 14049
+  Number of Gamers: 14079
   Percentage of Gamers: 30%
   Ratio: 1.83
   TA: '18'
@@ -311,7 +311,7 @@ Base Game Achievements:
   Description: Land a 720 Spin successfully
   GS: '15'
   Guide: true
-  Number of Gamers: 5122
+  Number of Gamers: 5129
   Percentage of Gamers: 11%
   Ratio: 3.03
   TA: '45'
@@ -323,7 +323,7 @@ Base Game Achievements:
   Description: Land a front- / backflip successfully
   GS: '10'
   Guide: true
-  Number of Gamers: 13612
+  Number of Gamers: 13636
   Percentage of Gamers: 29%
   Ratio: 1.86
   TA: '18'
@@ -335,10 +335,10 @@ Base Game Achievements:
   Description: Land a double front- / backflip successfully
   GS: '15'
   Guide: true
-  Number of Gamers: 4610
+  Number of Gamers: 4614
   Percentage of Gamers: 10%
-  Ratio: 3.19
-  TA: '47'
+  Ratio: 3.2
+  TA: '48'
   Tags:
   - Online/Offline
   - Single Player
@@ -347,7 +347,7 @@ Base Game Achievements:
   Description: Hold a Grab for 3 seconds and land successfully
   GS: '10'
   Guide: true
-  Number of Gamers: 18681
+  Number of Gamers: 18709
   Percentage of Gamers: 40%
   Ratio: 1.58
   TA: '15'
@@ -359,7 +359,7 @@ Base Game Achievements:
   Description: Land a combination of a flip or spin and grab successfully
   GS: '15'
   Guide: true
-  Number of Gamers: 10054
+  Number of Gamers: 10073
   Percentage of Gamers: 21%
   Ratio: 2.16
   TA: '32'
@@ -371,9 +371,9 @@ Base Game Achievements:
   Description: Land a combination of a flip, spin and grab successfully
   GS: '50'
   Guide: true
-  Number of Gamers: 3789
+  Number of Gamers: 3794
   Percentage of Gamers: 8%
-  Ratio: 3.53
+  Ratio: 3.52
   TA: '176'
   Tags:
   - Online/Offline
@@ -383,7 +383,7 @@ Base Game Achievements:
   Description: Do at least 25 Jumps in a Run
   GS: '20'
   Guide: true
-  Number of Gamers: 19059
+  Number of Gamers: 19095
   Percentage of Gamers: 40%
   Ratio: 1.57
   TA: '31'
@@ -395,9 +395,9 @@ Base Game Achievements:
   Description: Do at least 19 Grabs in a Run
   GS: '20'
   Guide: true
-  Number of Gamers: 2550
+  Number of Gamers: 2551
   Percentage of Gamers: 5%
-  Ratio: 4.31
+  Ratio: 4.3
   TA: '86'
   Tags:
   - Online/Offline
@@ -407,7 +407,7 @@ Base Game Achievements:
   Description: Do 13 backflips,frontflips or spins in a Run
   GS: '20'
   Guide: true
-  Number of Gamers: 4202
+  Number of Gamers: 4209
   Percentage of Gamers: 9%
   Ratio: 3.35
   TA: '67'
@@ -419,9 +419,9 @@ Base Game Achievements:
   Description: Ride a trail without crashing
   GS: '20'
   Guide: true
-  Number of Gamers: 8126
+  Number of Gamers: 8138
   Percentage of Gamers: 17%
-  Ratio: 2.41
+  Ratio: 2.4
   TA: '48'
   Tags:
   - Online/Offline
@@ -431,10 +431,10 @@ Base Game Achievements:
   Description: Receive 20 Badges
   GS: '10'
   Guide: true
-  Number of Gamers: 3102
+  Number of Gamers: 3107
   Percentage of Gamers: 7%
-  Ratio: 3.89
-  TA: '38'
+  Ratio: 3.9
+  TA: '39'
   Tags:
   - Online Mode
   - Versus
@@ -443,7 +443,7 @@ Base Game Achievements:
   Description: Finish at least the first goal during a Team mode run
   GS: '10'
   Guide: true
-  Number of Gamers: 2816
+  Number of Gamers: 2820
   Percentage of Gamers: 6%
   Ratio: 4.09
   TA: '40'
@@ -455,10 +455,10 @@ Base Game Achievements:
   Description: Finish all goals during a Team mode run
   GS: '50'
   Guide: true
-  Number of Gamers: 656
+  Number of Gamers: 655
   Percentage of Gamers: 1%
-  Ratio: 8.51
-  TA: '425'
+  Ratio: 8.49
+  TA: '424'
   Tags:
   - Online/Offline
   - Single Player
@@ -467,7 +467,7 @@ Base Game Achievements:
   Description: Take part in a Racing mode run.
   GS: '10'
   Guide: true
-  Number of Gamers: 7504
+  Number of Gamers: 7522
   Percentage of Gamers: 16%
   Ratio: 2.5
   TA: '25'
@@ -478,7 +478,7 @@ Base Game Achievements:
   Description: Reach 1st-3rd place on a Racing mode Run with at least 4 players
   GS: '50'
   Guide: true
-  Number of Gamers: 3547
+  Number of Gamers: 3551
   Percentage of Gamers: 8%
   Ratio: 3.64
   TA: '182'
@@ -490,7 +490,7 @@ Base Game Achievements:
   Description: Spectate another player
   GS: '10'
   Guide: true
-  Number of Gamers: 7273
+  Number of Gamers: 7288
   Percentage of Gamers: 15%
   Ratio: 2.54
   TA: '25'
@@ -501,10 +501,10 @@ Base Game Achievements:
   Description: Recover 20 other players
   GS: '15'
   Guide: true
-  Number of Gamers: 751
+  Number of Gamers: 750
   Percentage of Gamers: 2%
   Ratio: 7.93
-  TA: '118'
+  TA: '119'
   Tags:
   - Online Mode
   - Versus
@@ -513,7 +513,7 @@ Base Game Achievements:
   Description: Reach the Finish Line of the Training Ground
   GS: '10'
   Guide: true
-  Number of Gamers: 46383
+  Number of Gamers: 46463
   Percentage of Gamers: 98%
   Ratio: 1.0
   TA: '10'
@@ -524,28 +524,28 @@ Base Game Achievements:
   Description: Finish all the Trainig Ground Challenges
   GS: '10'
   Guide: true
-  Number of Gamers: 40127
+  Number of Gamers: 40195
   Percentage of Gamers: 85%
   Ratio: 1.08
   TA: '10'
   Tags:
   - Offline Game Mode
   - Single Player
-Base Ratio: 5.110877192982456
-Base TA: 7283
+Base Ratio: 23.71578947368421
+Base TA: 33795
 Delisted: false
 Developer: Megagon Industries
 Game Name: 'Lonely Mountains: Snow Riders'
 Genres: Sports, Skiing
 Install Size: 1660.0
 Number of Completions: 0
-Number of Gamers: 47252
+Number of Gamers: 47262
 Overall Completion Time:
 - 8.0
 - 10.0
 Overall GS: 1425
-Overall Ratio: 5.110877192982456
-Overall TA: 7283
+Overall Ratio: 23.71578947368421
+Overall TA: 33795
 PDU: 0
 Percentage Completed: 0.0
 Publisher: Megagon Industries
@@ -557,10 +557,10 @@ Update Achievements:
   Description: Find all resting places on Baifushan
   GS: '25'
   Guide: true
-  Number of Gamers: 355
+  Number of Gamers: 357
   Percentage of Gamers: 1%
-  Ratio: 11.82
-  TA: '295'
+  Ratio: 11.5
+  TA: '287'
   Tags:
   - Offline Mode
   - Single Player
@@ -569,10 +569,10 @@ Update Achievements:
   Description: Unlock Baifushan
   GS: '15'
   Guide: true
-  Number of Gamers: 899
+  Number of Gamers: 901
   Percentage of Gamers: 2%
-  Ratio: 7.35
-  TA: '110'
+  Ratio: 7.24
+  TA: '108'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -580,10 +580,10 @@ Update Achievements:
   Description: Finish all Blue Slope Challenges on Baifushan
   GS: '20'
   Guide: true
-  Number of Gamers: 410
+  Number of Gamers: 414
   Percentage of Gamers: 1%
-  Ratio: 10.91
-  TA: '218'
+  Ratio: 10.68
+  TA: '213'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -591,10 +591,10 @@ Update Achievements:
   Description: Finish all Black Slope Challenges on Baifushan
   GS: '25'
   Guide: true
-  Number of Gamers: 369
+  Number of Gamers: 372
   Percentage of Gamers: 1%
-  Ratio: 11.51
-  TA: '287'
+  Ratio: 11.27
+  TA: '281'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -602,10 +602,10 @@ Update Achievements:
   Description: Finish all Tricks Challenges on the Blue Slope of Tannenstein
   GS: '25'
   Guide: false
-  Number of Gamers: 2
+  Number of Gamers: 4
   Percentage of Gamers: 0%
-  Ratio: 14.74
-  TA: '368'
+  Ratio: 108.69
+  TA: 2,717
   Tags:
   - Offline Game Mode
   - Single Player
@@ -613,10 +613,10 @@ Update Achievements:
   Description: Finish all Tricks Challenges on the Black Slope of Tannenstein
   GS: '30'
   Guide: false
-  Number of Gamers: 1
+  Number of Gamers: 2
   Percentage of Gamers: 0%
-  Ratio: 17.53
-  TA: '525'
+  Ratio: 153.72
+  TA: 4,611
   Tags:
   - Offline Game Mode
   - Single Player
@@ -624,10 +624,10 @@ Update Achievements:
   Description: Finish all Tricks Challenges on the Blue Slope of Monte Guanaco
   GS: '25'
   Guide: false
-  Number of Gamers: 0
-  Percentage of Gamers: NA
-  Ratio: NA
-  TA: '25'
+  Number of Gamers: 1
+  Percentage of Gamers: 0%
+  Ratio: 217.39
+  TA: 5,434
   Tags:
   - Offline Game Mode
   - Single Player
@@ -635,10 +635,10 @@ Update Achievements:
   Description: Finish all Tricks Challenges on the Black Slope of Monte Guanaco
   GS: '30'
   Guide: false
-  Number of Gamers: 0
-  Percentage of Gamers: NA
-  Ratio: NA
-  TA: '30'
+  Number of Gamers: 1
+  Percentage of Gamers: 0%
+  Ratio: 217.39
+  TA: 6,521
   Tags:
   - Offline Game Mode
   - Single Player
@@ -690,10 +690,10 @@ Update Achievements:
   Description: Finish all Free Ride Challenges on Tannenstein"
   GS: '30'
   Guide: false
-  Number of Gamers: 1
+  Number of Gamers: 2
   Percentage of Gamers: 0%
-  Ratio: 14.74
-  TA: '442'
+  Ratio: 153.72
+  TA: 4,611
   Tags:
   - Offline Mode
   - Single Player
@@ -702,10 +702,10 @@ Update Achievements:
   Description: Finish all Free Ride Challenges on Monte Guanaco"
   GS: '30'
   Guide: false
-  Number of Gamers: 0
-  Percentage of Gamers: NA
-  Ratio: NA
-  TA: '30'
+  Number of Gamers: 2
+  Percentage of Gamers: 0%
+  Ratio: 153.72
+  TA: 4,611
   Tags:
   - Offline Mode
   - Single Player
