--- a/game_data/Bear-Escape-Mission-Xbox-One.yaml
+++ b/game_data/Bear-Escape-Mission-Xbox-One.yaml
@@ -3,46 +3,46 @@ Add On Achievements:
   Description: Complete level 9
   GS: '200'
   Guide: false
-  Number of Gamers: 73
-  Percentage of Gamers: 90%
-  Ratio: 1.54
-  TA: '309'
+  Number of Gamers: 160
+  Percentage of Gamers: 99%
+  Ratio: 1.29
+  TA: '259'
   Tags: []
 - Achievement Name: 11 levels completed
   Description: Complete level 11
   GS: '200'
   Guide: false
-  Number of Gamers: 73
-  Percentage of Gamers: 90%
-  Ratio: 1.54
-  TA: '309'
+  Number of Gamers: 159
+  Percentage of Gamers: 99%
+  Ratio: 1.29
+  TA: '259'
   Tags: []
 - Achievement Name: 12 levels completed
   Description: Complete level 12
   GS: '200'
   Guide: false
-  Number of Gamers: 73
-  Percentage of Gamers: 90%
-  Ratio: 1.54
-  TA: '309'
+  Number of Gamers: 158
+  Percentage of Gamers: 98%
+  Ratio: 1.3
+  TA: '260'
   Tags: []
 - Achievement Name: 13 levels completed
   Description: Complete level 13
   GS: '200'
   Guide: false
-  Number of Gamers: 73
-  Percentage of Gamers: 90%
-  Ratio: 1.54
-  TA: '309'
+  Number of Gamers: 158
+  Percentage of Gamers: 98%
+  Ratio: 1.3
+  TA: '260'
   Tags: []
 - Achievement Name: 14 levels completed
   Description: Complete level 14
   GS: '200'
   Guide: false
-  Number of Gamers: 73
-  Percentage of Gamers: 90%
-  Ratio: 1.54
-  TA: '309'
+  Number of Gamers: 158
+  Percentage of Gamers: 98%
+  Ratio: 1.3
+  TA: '260'
   Tags: []
 Base Completion Time:
 - 0.0
@@ -53,7 +53,7 @@ Base Game Achievements:
   Description: Complete the first level
   GS: '100'
   Guide: true
-  Number of Gamers: 400
+  Number of Gamers: 408
   Percentage of Gamers: 100%
   Ratio: 1.0
   TA: '100'
@@ -65,7 +65,7 @@ Base Game Achievements:
   Description: Complete level 2
   GS: '100'
   Guide: true
-  Number of Gamers: 396
+  Number of Gamers: 404
   Percentage of Gamers: 99%
   Ratio: 1.0
   TA: '100'
@@ -77,8 +77,8 @@ Base Game Achievements:
   Description: Complete level 5
   GS: '100'
   Guide: true
-  Number of Gamers: 390
-  Percentage of Gamers: 97%
+  Number of Gamers: 398
+  Percentage of Gamers: 98%
   Ratio: 1.01
   TA: '101'
   Tags:
@@ -89,7 +89,7 @@ Base Game Achievements:
   Description: Complete level 10
   GS: '100'
   Guide: true
-  Number of Gamers: 364
+  Number of Gamers: 372
   Percentage of Gamers: 91%
   Ratio: 1.04
   TA: '104'
@@ -101,8 +101,8 @@ Base Game Achievements:
   Description: Complete level 15
   GS: '100'
   Guide: true
-  Number of Gamers: 345
-  Percentage of Gamers: 86%
+  Number of Gamers: 354
+  Percentage of Gamers: 87%
   Ratio: 1.07
   TA: '107'
   Tags:
@@ -113,7 +113,7 @@ Base Game Achievements:
   Description: Complete level 20
   GS: '100'
   Guide: true
-  Number of Gamers: 342
+  Number of Gamers: 348
   Percentage of Gamers: 85%
   Ratio: 1.08
   TA: '108'
@@ -125,7 +125,7 @@ Base Game Achievements:
   Description: Complete level 25
   GS: '100'
   Guide: true
-  Number of Gamers: 338
+  Number of Gamers: 344
   Percentage of Gamers: 84%
   Ratio: 1.08
   TA: '108'
@@ -137,7 +137,7 @@ Base Game Achievements:
   Description: Complete level 30
   GS: '100'
   Guide: true
-  Number of Gamers: 334
+  Number of Gamers: 340
   Percentage of Gamers: 83%
   Ratio: 1.09
   TA: '109'
@@ -149,7 +149,7 @@ Base Game Achievements:
   Description: Complete level 35
   GS: '100'
   Guide: true
-  Number of Gamers: 328
+  Number of Gamers: 334
   Percentage of Gamers: 82%
   Ratio: 1.1
   TA: '110'
@@ -161,31 +161,31 @@ Base Game Achievements:
   Description: Complete level 40
   GS: '100'
   Guide: true
-  Number of Gamers: 327
-  Percentage of Gamers: 82%
+  Number of Gamers: 332
+  Percentage of Gamers: 81%
   Ratio: 1.1
   TA: '110'
   Tags:
   - Offline Mode
   - Single Player
   - Main Storyline
-Base Ratio: 1.0785
-Base TA: 2157
+Base Ratio: 1.077
+Base TA: 2154
 Delisted: false
 Developer: Yume Game Studio
 Game Name: Bear Escape Mission (Xbox One)
 Genres: Platformer
 Install Size: 368.0
-Number of Completions: 80
-Number of Gamers: 401
+Number of Completions: 153
+Number of Gamers: 408
 Overall Completion Time:
 - 0.0
 - 1.5
 Overall GS: 3000
-Overall Ratio: 1.234
-Overall TA: 3702
+Overall Ratio: 1.1506666666666667
+Overall TA: 3452
 PDU: 0
-Percentage Completed: 19.95
+Percentage Completed: 37.5
 Publisher: Yume Game Studio
 Release Date: 11 April 2025
 Server Closure: false
@@ -195,10 +195,10 @@ Update Achievements:
   Description: Complete level 3
   GS: '200'
   Guide: false
-  Number of Gamers: 332
-  Percentage of Gamers: 83%
+  Number of Gamers: 342
+  Percentage of Gamers: 84%
   Ratio: 1.09
-  TA: '219'
+  TA: '218'
   Tags:
   - Offline Mode
   - Single Player
@@ -207,10 +207,10 @@ Update Achievements:
   Description: Complete level 4
   GS: '200'
   Guide: false
-  Number of Gamers: 332
-  Percentage of Gamers: 83%
+  Number of Gamers: 342
+  Percentage of Gamers: 84%
   Ratio: 1.09
-  TA: '219'
+  TA: '218'
   Tags:
   - Offline Mode
   - Single Player
@@ -219,10 +219,10 @@ Update Achievements:
   Description: Complete level 6
   GS: '200'
   Guide: false
-  Number of Gamers: 330
-  Percentage of Gamers: 82%
-  Ratio: 1.1
-  TA: '220'
+  Number of Gamers: 340
+  Percentage of Gamers: 83%
+  Ratio: 1.09
+  TA: '219'
   Tags:
   - Offline Mode
   - Single Player
@@ -231,8 +231,8 @@ Update Achievements:
   Description: Complete level 7
   GS: '200'
   Guide: false
-  Number of Gamers: 325
-  Percentage of Gamers: 81%
+  Number of Gamers: 333
+  Percentage of Gamers: 82%
   Ratio: 1.1
   TA: '221'
   Tags:
@@ -243,8 +243,8 @@ Update Achievements:
   Description: Complete level 8
   GS: '200'
   Guide: false
-  Number of Gamers: 326
-  Percentage of Gamers: 81%
+  Number of Gamers: 334
+  Percentage of Gamers: 82%
   Ratio: 1.1
   TA: '221'
   Tags:
