--- a/game_data/Buddy-Garden-Xbox-One.yaml
+++ b/game_data/Buddy-Garden-Xbox-One.yaml
@@ -3,46 +3,46 @@ Add On Achievements:
   Description: Push seeds 5 times
   GS: '200'
   Guide: false
-  Number of Gamers: 85
-  Percentage of Gamers: 98%
-  Ratio: 1.55
-  TA: '310'
+  Number of Gamers: 155
+  Percentage of Gamers: 96%
+  Ratio: 1.21
+  TA: '243'
   Tags: []
 - Achievement Name: Push seeds 10
   Description: Push seeds 10 times
   GS: '200'
   Guide: false
-  Number of Gamers: 85
-  Percentage of Gamers: 98%
-  Ratio: 1.55
-  TA: '310'
+  Number of Gamers: 155
+  Percentage of Gamers: 96%
+  Ratio: 1.21
+  TA: '243'
   Tags: []
 - Achievement Name: Push seeds 15
   Description: Push seeds 15 times
   GS: '200'
   Guide: false
-  Number of Gamers: 85
-  Percentage of Gamers: 98%
-  Ratio: 1.55
-  TA: '310'
+  Number of Gamers: 155
+  Percentage of Gamers: 96%
+  Ratio: 1.21
+  TA: '243'
   Tags: []
 - Achievement Name: Push seeds 20
   Description: Push seeds 20 times
   GS: '200'
   Guide: false
-  Number of Gamers: 85
-  Percentage of Gamers: 98%
-  Ratio: 1.55
-  TA: '310'
+  Number of Gamers: 155
+  Percentage of Gamers: 96%
+  Ratio: 1.21
+  TA: '243'
   Tags: []
 - Achievement Name: Push seeds 25
   Description: Push seeds 25 times
   GS: '200'
   Guide: false
-  Number of Gamers: 85
-  Percentage of Gamers: 98%
-  Ratio: 1.55
-  TA: '310'
+  Number of Gamers: 155
+  Percentage of Gamers: 96%
+  Ratio: 1.21
+  TA: '243'
   Tags: []
 Base Completion Time:
 - 0.0
@@ -53,7 +53,7 @@ Base Game Achievements:
   Description: Beat level 5
   GS: '100'
   Guide: false
-  Number of Gamers: 297
+  Number of Gamers: 308
   Percentage of Gamers: 100%
   Ratio: 1.0
   TA: '100'
@@ -65,8 +65,8 @@ Base Game Achievements:
   Description: Beat level 10
   GS: '100'
   Guide: false
-  Number of Gamers: 293
-  Percentage of Gamers: 98%
+  Number of Gamers: 306
+  Percentage of Gamers: 99%
   Ratio: 1.0
   TA: '100'
   Tags:
@@ -77,7 +77,7 @@ Base Game Achievements:
   Description: Beat level 15
   GS: '100'
   Guide: false
-  Number of Gamers: 288
+  Number of Gamers: 299
   Percentage of Gamers: 97%
   Ratio: 1.01
   TA: '101'
@@ -89,10 +89,10 @@ Base Game Achievements:
   Description: Beat level 20
   GS: '100'
   Guide: false
-  Number of Gamers: 288
-  Percentage of Gamers: 97%
-  Ratio: 1.01
-  TA: '101'
+  Number of Gamers: 297
+  Percentage of Gamers: 96%
+  Ratio: 1.02
+  TA: '102'
   Tags:
   - Offline Mode
   - Single Player
@@ -101,10 +101,10 @@ Base Game Achievements:
   Description: Beat level 25
   GS: '100'
   Guide: false
-  Number of Gamers: 282
-  Percentage of Gamers: 95%
-  Ratio: 1.02
-  TA: '102'
+  Number of Gamers: 291
+  Percentage of Gamers: 94%
+  Ratio: 1.03
+  TA: '103'
   Tags:
   - Offline Mode
   - Single Player
@@ -113,10 +113,10 @@ Base Game Achievements:
   Description: Beat level 30
   GS: '100'
   Guide: false
-  Number of Gamers: 281
+  Number of Gamers: 290
   Percentage of Gamers: 94%
-  Ratio: 1.02
-  TA: '102'
+  Ratio: 1.03
+  TA: '103'
   Tags:
   - Offline Mode
   - Single Player
@@ -125,10 +125,10 @@ Base Game Achievements:
   Description: Beat level 35
   GS: '100'
   Guide: false
-  Number of Gamers: 280
+  Number of Gamers: 290
   Percentage of Gamers: 94%
-  Ratio: 1.02
-  TA: '102'
+  Ratio: 1.03
+  TA: '103'
   Tags:
   - Offline Mode
   - Single Player
@@ -137,7 +137,7 @@ Base Game Achievements:
   Description: Beat level 40
   GS: '100'
   Guide: false
-  Number of Gamers: 277
+  Number of Gamers: 287
   Percentage of Gamers: 93%
   Ratio: 1.03
   TA: '103'
@@ -149,7 +149,7 @@ Base Game Achievements:
   Description: Beat level 12
   GS: '100'
   Guide: false
-  Number of Gamers: 289
+  Number of Gamers: 301
   Percentage of Gamers: 97%
   Ratio: 1.01
   TA: '101'
@@ -161,31 +161,31 @@ Base Game Achievements:
   Description: Beat level 27
   GS: '100'
   Guide: false
-  Number of Gamers: 282
-  Percentage of Gamers: 95%
-  Ratio: 1.02
-  TA: '102'
+  Number of Gamers: 291
+  Percentage of Gamers: 94%
+  Ratio: 1.03
+  TA: '103'
   Tags:
   - Offline Mode
   - Single Player
   - Main Storyline
-Base Ratio: 1.02
-Base TA: 2040
+Base Ratio: 1.0215
+Base TA: 2043
 Delisted: false
 Developer: 2dragontails
 Game Name: Buddy Garden (Xbox One)
 Genres: Puzzle
 Install Size: 419.0
-Number of Completions: 80
-Number of Gamers: 298
+Number of Completions: 150
+Number of Gamers: 309
 Overall Completion Time:
 - 0.0
 - 1.5
 Overall GS: 3000
-Overall Ratio: 1.1966666666666668
-Overall TA: 3590
+Overall Ratio: 1.086
+Overall TA: 3258
 PDU: 0
-Percentage Completed: 26.85
+Percentage Completed: 48.54
 Publisher: 2dragontails
 Release Date: 18 June 2025
 Server Closure: false
@@ -195,10 +195,10 @@ Update Achievements:
   Description: Beat level 2
   GS: '200'
   Guide: false
-  Number of Gamers: 288
-  Percentage of Gamers: 97%
+  Number of Gamers: 302
+  Percentage of Gamers: 98%
   Ratio: 1.01
-  TA: '203'
+  TA: '202'
   Tags:
   - Offline Mode
   - Single Player
@@ -207,10 +207,10 @@ Update Achievements:
   Description: Beat level 7
   GS: '200'
   Guide: false
-  Number of Gamers: 287
-  Percentage of Gamers: 96%
+  Number of Gamers: 301
+  Percentage of Gamers: 97%
   Ratio: 1.01
-  TA: '203'
+  TA: '202'
   Tags:
   - Offline Mode
   - Single Player
@@ -219,8 +219,8 @@ Update Achievements:
   Description: Beat level 16
   GS: '200'
   Guide: false
-  Number of Gamers: 281
-  Percentage of Gamers: 94%
+  Number of Gamers: 294
+  Percentage of Gamers: 95%
   Ratio: 1.02
   TA: '205'
   Tags:
@@ -231,7 +231,7 @@ Update Achievements:
   Description: Beat level 21
   GS: '200'
   Guide: false
-  Number of Gamers: 279
+  Number of Gamers: 290
   Percentage of Gamers: 94%
   Ratio: 1.03
   TA: '206'
@@ -243,8 +243,8 @@ Update Achievements:
   Description: Beat level 39
   GS: '200'
   Guide: false
-  Number of Gamers: 271
-  Percentage of Gamers: 91%
+  Number of Gamers: 283
+  Percentage of Gamers: 92%
   Ratio: 1.04
   TA: '209'
   Tags:
