--- a/game_data/DOOM-Eternal-Windows.yaml
+++ b/game_data/DOOM-Eternal-Windows.yaml
@@ -3,10 +3,10 @@ Add On Achievements:
   Description: Complete the UAC Atlantica Facility (Ancient Gods 1)
   GS: '30'
   Guide: false
-  Number of Gamers: 978
+  Number of Gamers: 1163
   Percentage of Gamers: 100%
-  Ratio: 2.38
-  TA: '71'
+  Ratio: 2.34
+  TA: '70'
   Tags:
   - Offline Mode
   - Single Player
@@ -15,10 +15,10 @@ Add On Achievements:
   Description: Destroy the Life Sphere in the Blood Swamps (Ancient Gods 1)
   GS: '30'
   Guide: false
-  Number of Gamers: 867
+  Number of Gamers: 1037
   Percentage of Gamers: 89%
-  Ratio: 2.53
-  TA: '75'
+  Ratio: 2.47
+  TA: '74'
   Tags:
   - Offline Mode
   - Single Player
@@ -27,10 +27,10 @@ Add On Achievements:
   Description: Defeat Samur in the Holt (Ancient Gods 1)
   GS: '40'
   Guide: false
-  Number of Gamers: 781
-  Percentage of Gamers: 80%
-  Ratio: 2.66
-  TA: '106'
+  Number of Gamers: 938
+  Percentage of Gamers: 81%
+  Ratio: 2.6
+  TA: '104'
   Tags:
   - Offline Mode
   - Single Player
@@ -40,10 +40,10 @@ Add On Achievements:
     Gods 1)
   GS: '90'
   Guide: false
-  Number of Gamers: 252
-  Percentage of Gamers: 26%
-  Ratio: 4.69
-  TA: '422'
+  Number of Gamers: 313
+  Percentage of Gamers: 27%
+  Ratio: 4.51
+  TA: '405'
   Tags:
   - Offline Mode
   - Single Player
@@ -52,10 +52,10 @@ Add On Achievements:
   Description: Acquire all Support Runes in a single save slot (Ancient Gods 1)
   GS: '30'
   Guide: true
-  Number of Gamers: 535
-  Percentage of Gamers: 55%
-  Ratio: 3.22
-  TA: '96'
+  Number of Gamers: 647
+  Percentage of Gamers: 56%
+  Ratio: 3.13
+  TA: '94'
   Tags:
   - Offline Mode
   - Single Player
@@ -65,10 +65,10 @@ Add On Achievements:
     1)
   GS: '15'
   Guide: false
-  Number of Gamers: 452
-  Percentage of Gamers: 46%
-  Ratio: 3.5
-  TA: '52'
+  Number of Gamers: 554
+  Percentage of Gamers: 48%
+  Ratio: 3.39
+  TA: '50'
   Tags:
   - Offline Mode
   - Single Player
@@ -77,11 +77,11 @@ Add On Achievements:
   Description: Collect all physical Codex pages in a single save slot (Ancient Gods
     1)
   GS: '15'
-  Guide: false
-  Number of Gamers: 488
-  Percentage of Gamers: 50%
-  Ratio: 3.37
-  TA: '50'
+  Guide: true
+  Number of Gamers: 589
+  Percentage of Gamers: 51%
+  Ratio: 3.28
+  TA: '49'
   Tags:
   - Offline Mode
   - Single Player
@@ -90,10 +90,10 @@ Add On Achievements:
   Description: Complete World Spear (Ancient Gods 2)
   GS: '15'
   Guide: false
-  Number of Gamers: 739
+  Number of Gamers: 885
   Percentage of Gamers: 100%
-  Ratio: 2.55
-  TA: '38'
+  Ratio: 2.5
+  TA: '37'
   Tags:
   - Offline Mode
   - Single Player
@@ -102,10 +102,10 @@ Add On Achievements:
   Description: Complete Reclaimed Earth (Ancient Gods 2)
   GS: '30'
   Guide: false
-  Number of Gamers: 703
-  Percentage of Gamers: 95%
-  Ratio: 2.62
-  TA: '78'
+  Number of Gamers: 847
+  Percentage of Gamers: 96%
+  Ratio: 2.56
+  TA: '76'
   Tags:
   - Offline Mode
   - Single Player
@@ -114,10 +114,10 @@ Add On Achievements:
   Description: Complete Immora (Ancient Gods 2)
   GS: '30'
   Guide: false
-  Number of Gamers: 696
-  Percentage of Gamers: 94%
-  Ratio: 2.63
-  TA: '79'
+  Number of Gamers: 839
+  Percentage of Gamers: 95%
+  Ratio: 2.57
+  TA: '77'
   Tags:
   - Offline Mode
   - Single Player
@@ -126,10 +126,10 @@ Add On Achievements:
   Description: Acquire all Sentinel Hammer upgrades (Ancient Gods 2)
   GS: '30'
   Guide: false
-  Number of Gamers: 701
+  Number of Gamers: 844
   Percentage of Gamers: 95%
-  Ratio: 2.62
-  TA: '78'
+  Ratio: 2.56
+  TA: '76'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -137,10 +137,10 @@ Add On Achievements:
   Description: Kill the Dark Lord (Ancient Gods 2)
   GS: '40'
   Guide: false
-  Number of Gamers: 676
-  Percentage of Gamers: 91%
-  Ratio: 2.67
-  TA: '106'
+  Number of Gamers: 815
+  Percentage of Gamers: 92%
+  Ratio: 2.61
+  TA: '104'
   Tags:
   - Offline Mode
   - Single Player
@@ -150,10 +150,10 @@ Add On Achievements:
     Gods 2)
   GS: '90'
   Guide: false
-  Number of Gamers: 248
+  Number of Gamers: 302
   Percentage of Gamers: 34%
-  Ratio: 4.41
-  TA: '397'
+  Ratio: 4.28
+  TA: '386'
   Tags:
   - Offline Mode
   - Single Player
@@ -162,11 +162,11 @@ Add On Achievements:
   Description: Collect all physical Codex pages in a single save slot (Ancient Gods
     2)
   GS: '15'
-  Guide: false
-  Number of Gamers: 500
+  Guide: true
+  Number of Gamers: 606
   Percentage of Gamers: 68%
-  Ratio: 3.1
-  TA: '46'
+  Ratio: 3.02
+  TA: '45'
   Tags:
   - Offline Mode
   - Single Player
@@ -180,7 +180,7 @@ Base Game Achievements:
   Description: Complete Hell on Earth
   GS: '20'
   Guide: true
-  Number of Gamers: 28341
+  Number of Gamers: 31406
   Percentage of Gamers: 90%
   Ratio: 1.05
   TA: '21'
@@ -192,10 +192,10 @@ Base Game Achievements:
   Description: Kill the Doom Hunters
   GS: '30'
   Guide: true
-  Number of Gamers: 11761
-  Percentage of Gamers: 37%
-  Ratio: 1.63
-  TA: '49'
+  Number of Gamers: 13308
+  Percentage of Gamers: 38%
+  Ratio: 1.61
+  TA: '48'
   Tags:
   - Offline Mode
   - Single Player
@@ -204,9 +204,9 @@ Base Game Achievements:
   Description: Blow a hole in Mars
   GS: '20'
   Guide: true
-  Number of Gamers: 8451
-  Percentage of Gamers: 27%
-  Ratio: 1.93
+  Number of Gamers: 9667
+  Percentage of Gamers: 28%
+  Ratio: 1.9
   TA: '38'
   Tags:
   - Offline Mode
@@ -216,10 +216,10 @@ Base Game Achievements:
   Description: Best the Gladiator in the coliseum
   GS: '25'
   Guide: true
-  Number of Gamers: 8309
-  Percentage of Gamers: 26%
-  Ratio: 1.94
-  TA: '48'
+  Number of Gamers: 9505
+  Percentage of Gamers: 27%
+  Ratio: 1.91
+  TA: '47'
   Tags:
   - Offline Mode
   - Single Player
@@ -228,10 +228,10 @@ Base Game Achievements:
   Description: Acquire a new Crucible in Taras Nabad
   GS: '50'
   Guide: false
-  Number of Gamers: 7500
-  Percentage of Gamers: 24%
-  Ratio: 2.05
-  TA: '102'
+  Number of Gamers: 8629
+  Percentage of Gamers: 25%
+  Ratio: 2.01
+  TA: '100'
   Tags:
   - Offline Mode
   - Single Player
@@ -240,10 +240,10 @@ Base Game Achievements:
   Description: Kill the Khan Maykr
   GS: '30'
   Guide: true
-  Number of Gamers: 6672
-  Percentage of Gamers: 21%
-  Ratio: 2.17
-  TA: '65'
+  Number of Gamers: 7704
+  Percentage of Gamers: 22%
+  Ratio: 2.12
+  TA: '63'
   Tags:
   - Offline Mode
   - Single Player
@@ -252,10 +252,10 @@ Base Game Achievements:
   Description: Kill the Icon of Sin
   GS: '90'
   Guide: true
-  Number of Gamers: 6499
-  Percentage of Gamers: 21%
-  Ratio: 2.2
-  TA: '198'
+  Number of Gamers: 7507
+  Percentage of Gamers: 22%
+  Ratio: 2.15
+  TA: '194'
   Tags:
   - Offline Mode
   - Single Player
@@ -264,10 +264,10 @@ Base Game Achievements:
   Description: Complete the Campaign on any difficulty
   GS: '50'
   Guide: false
-  Number of Gamers: 6499
-  Percentage of Gamers: 21%
-  Ratio: 2.2
-  TA: '110'
+  Number of Gamers: 7511
+  Percentage of Gamers: 22%
+  Ratio: 2.15
+  TA: '107'
   Tags:
   - Offline Mode
   - Single Player
@@ -278,10 +278,10 @@ Base Game Achievements:
     Nabad in a single save slot
   GS: '15'
   Guide: true
-  Number of Gamers: 1725
-  Percentage of Gamers: 5%
-  Ratio: 4.27
-  TA: '64'
+  Number of Gamers: 2030
+  Percentage of Gamers: 6%
+  Ratio: 4.14
+  TA: '62'
   Tags:
   - Offline Mode
   - Single Player
@@ -291,10 +291,10 @@ Base Game Achievements:
   Description: Complete a Mission with only the Famine Mode cheat on
   GS: '15'
   Guide: true
-  Number of Gamers: 900
+  Number of Gamers: 1032
   Percentage of Gamers: 3%
-  Ratio: 5.92
-  TA: '88'
+  Ratio: 5.81
+  TA: '87'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -302,10 +302,10 @@ Base Game Achievements:
   Description: Complete Extra Life Mode with 10 Extra Lives in your Inventory
   GS: '50'
   Guide: true
-  Number of Gamers: 517
+  Number of Gamers: 610
   Percentage of Gamers: 2%
-  Ratio: 7.81
-  TA: '390'
+  Ratio: 7.56
+  TA: '378'
   Tags:
   - Offline Mode
   - Single Player
@@ -314,8 +314,8 @@ Base Game Achievements:
   Description: Upgrade Health, Armor, or Ammo
   GS: '20'
   Guide: true
-  Number of Gamers: 25698
-  Percentage of Gamers: 81%
+  Number of Gamers: 28532
+  Percentage of Gamers: 82%
   Ratio: 1.1
   TA: '22'
   Tags:
@@ -326,10 +326,10 @@ Base Game Achievements:
   Description: Fully upgrade Health, Armor, or Ammo in a single save slot
   GS: '30'
   Guide: false
-  Number of Gamers: 7239
-  Percentage of Gamers: 23%
-  Ratio: 2.08
-  TA: '62'
+  Number of Gamers: 8326
+  Percentage of Gamers: 24%
+  Ratio: 2.04
+  TA: '61'
   Tags:
   - Offline Mode
   - Single Player
@@ -338,9 +338,9 @@ Base Game Achievements:
   Description: Complete a Praetor Suit Perk category in a single save slot
   GS: '15'
   Guide: false
-  Number of Gamers: 9105
-  Percentage of Gamers: 29%
-  Ratio: 1.86
+  Number of Gamers: 10397
+  Percentage of Gamers: 30%
+  Ratio: 1.83
   TA: '27'
   Tags:
   - Offline Mode
@@ -350,10 +350,10 @@ Base Game Achievements:
   Description: Purchase all Praetor Suit Perks in a single save slot
   GS: '100'
   Guide: false
-  Number of Gamers: 3911
-  Percentage of Gamers: 12%
-  Ratio: 2.84
-  TA: '284'
+  Number of Gamers: 4541
+  Percentage of Gamers: 13%
+  Ratio: 2.77
+  TA: '277'
   Tags:
   - Offline Mode
   - Single Player
@@ -364,10 +364,10 @@ Base Game Achievements:
     slot
   GS: '25'
   Guide: false
-  Number of Gamers: 8176
-  Percentage of Gamers: 26%
-  Ratio: 1.96
-  TA: '49'
+  Number of Gamers: 9394
+  Percentage of Gamers: 27%
+  Ratio: 1.92
+  TA: '48'
   Tags:
   - Offline Mode
   - Single Player
@@ -377,10 +377,10 @@ Base Game Achievements:
   Description: Pick up 20 Extra Lives Total in a single save slot
   GS: '30'
   Guide: true
-  Number of Gamers: 7829
-  Percentage of Gamers: 25%
-  Ratio: 2.0
-  TA: '60'
+  Number of Gamers: 8944
+  Percentage of Gamers: 26%
+  Ratio: 1.97
+  TA: '59'
   Tags:
   - Offline Mode
   - Single Player
@@ -389,10 +389,10 @@ Base Game Achievements:
   Description: Complete the cheat code collection in a single save slot
   GS: '10'
   Guide: false
-  Number of Gamers: 2373
+  Number of Gamers: 2738
   Percentage of Gamers: 8%
-  Ratio: 3.64
-  TA: '36'
+  Ratio: 3.57
+  TA: '35'
   Tags:
   - Offline Mode
   - Single Player
@@ -401,10 +401,10 @@ Base Game Achievements:
   Description: Complete the album collection in a single save slot
   GS: '10'
   Guide: false
-  Number of Gamers: 2399
+  Number of Gamers: 2781
   Percentage of Gamers: 8%
-  Ratio: 3.62
-  TA: '36'
+  Ratio: 3.54
+  TA: '35'
   Tags:
   - Offline Mode
   - Single Player
@@ -413,10 +413,10 @@ Base Game Achievements:
   Description: Complete the toy collection in a single save slot
   GS: '10'
   Guide: false
-  Number of Gamers: 2182
+  Number of Gamers: 2519
   Percentage of Gamers: 7%
-  Ratio: 3.8
-  TA: '38'
+  Ratio: 3.72
+  TA: '37'
   Tags:
   - Offline Mode
   - Single Player
@@ -425,10 +425,10 @@ Base Game Achievements:
   Description: Collect all physical Codex pages in a single save slot
   GS: '30'
   Guide: false
-  Number of Gamers: 2556
+  Number of Gamers: 2966
   Percentage of Gamers: 8%
-  Ratio: 3.51
-  TA: '105'
+  Ratio: 3.43
+  TA: '102'
   Tags:
   - Offline Mode
   - Single Player
@@ -437,9 +437,9 @@ Base Game Achievements:
   Description: Complete a Slayer Gate
   GS: '20'
   Guide: true
-  Number of Gamers: 14389
+  Number of Gamers: 16214
   Percentage of Gamers: 46%
-  Ratio: 1.48
+  Ratio: 1.46
   TA: '29'
   Tags:
   - Offline Mode
@@ -449,10 +449,10 @@ Base Game Achievements:
   Description: Complete all Slayer Gates in a single save slot
   GS: '40'
   Guide: false
-  Number of Gamers: 3804
-  Percentage of Gamers: 12%
-  Ratio: 2.88
-  TA: '115'
+  Number of Gamers: 4415
+  Percentage of Gamers: 13%
+  Ratio: 2.81
+  TA: '112'
   Tags:
   - Offline Mode
   - Single Player
@@ -461,10 +461,10 @@ Base Game Achievements:
   Description: Master all Weapon Mods in a single save slot
   GS: '30'
   Guide: true
-  Number of Gamers: 1492
+  Number of Gamers: 1732
   Percentage of Gamers: 5%
-  Ratio: 4.6
-  TA: '138'
+  Ratio: 4.48
+  TA: '134'
   Tags:
   - Offline Mode
   - Single Player
@@ -474,10 +474,10 @@ Base Game Achievements:
   Description: Acquire the Unmaykr
   GS: '20'
   Guide: true
-  Number of Gamers: 3469
-  Percentage of Gamers: 11%
-  Ratio: 3.01
-  TA: '60'
+  Number of Gamers: 4014
+  Percentage of Gamers: 12%
+  Ratio: 2.94
+  TA: '58'
   Tags:
   - Offline Mode
   - Single Player
@@ -486,7 +486,7 @@ Base Game Achievements:
   Description: Perform 33 Unique Glory Kills in a single save slot
   GS: '33'
   Guide: true
-  Number of Gamers: 29007
+  Number of Gamers: 32083
   Percentage of Gamers: 92%
   Ratio: 1.04
   TA: '34'
@@ -497,10 +497,10 @@ Base Game Achievements:
   Description: Play as 5 different Player Demons in BATTLEMODE
   GS: '20'
   Guide: true
-  Number of Gamers: 443
+  Number of Gamers: 516
   Percentage of Gamers: 1%
-  Ratio: 8.44
-  TA: '168'
+  Ratio: 8.22
+  TA: '164'
   Tags:
   - Online Mode
   - Versus
@@ -509,10 +509,10 @@ Base Game Achievements:
   Description: Do 5000 damage as a Player Demon in BATTLEMODE
   GS: '20'
   Guide: true
-  Number of Gamers: 399
+  Number of Gamers: 471
   Percentage of Gamers: 1%
-  Ratio: 8.89
-  TA: '177'
+  Ratio: 8.6
+  TA: '172'
   Tags:
   - Online Mode
   - Versus
@@ -522,10 +522,10 @@ Base Game Achievements:
   Description: Kill 200 opponents in BATTLEMODE
   GS: '20'
   Guide: true
-  Number of Gamers: 291
+  Number of Gamers: 356
   Percentage of Gamers: 1%
-  Ratio: 10.41
-  TA: '208'
+  Ratio: 9.9
+  TA: '198'
   Tags:
   - Online Mode
   - Versus
@@ -535,10 +535,10 @@ Base Game Achievements:
   Description: Play 25 BATTLEMODE matches
   GS: '25'
   Guide: true
-  Number of Gamers: 368
+  Number of Gamers: 440
   Percentage of Gamers: 1%
-  Ratio: 9.26
-  TA: '231'
+  Ratio: 8.9
+  TA: '222'
   Tags:
   - Online Mode
   - Versus
@@ -548,10 +548,10 @@ Base Game Achievements:
   Description: Kill a Player Demon with each of the 8 Slayer weapons in BATTLEMODE
   GS: '10'
   Guide: true
-  Number of Gamers: 322
+  Number of Gamers: 381
   Percentage of Gamers: 1%
-  Ratio: 9.9
-  TA: '99'
+  Ratio: 9.57
+  TA: '95'
   Tags:
   - Online Mode
   - Versus
@@ -560,10 +560,10 @@ Base Game Achievements:
   Description: Heal yourself or your teammate for 50000 health in BATTLEMODE
   GS: '20'
   Guide: true
-  Number of Gamers: 318
+  Number of Gamers: 383
   Percentage of Gamers: 1%
-  Ratio: 9.96
-  TA: '199'
+  Ratio: 9.54
+  TA: '190'
   Tags:
   - Online Mode
   - Versus
@@ -573,32 +573,32 @@ Base Game Achievements:
   Description: Kill 666 Demons (excluding Player Demons and Wolves)
   GS: '67'
   Guide: true
-  Number of Gamers: 15630
-  Percentage of Gamers: 49%
-  Ratio: 1.42
-  TA: '95'
+  Number of Gamers: 17640
+  Percentage of Gamers: 51%
+  Ratio: 1.4
+  TA: '94'
   Tags:
   - Online/Offline
   - Single Player
   - Versus
   - Cumulative +
-Base Ratio: 3.5770334928229666
-Base TA: 3738
+Base Ratio: 3.475598086124402
+Base TA: 3632
 Delisted: false
 Developer: id Software
 Game Name: DOOM Eternal (Windows)
 Genres: First Person Shooter, Platformer, Action Horror
 Install Size: 89480.0
-Number of Completions: 153
-Number of Gamers: 31590
+Number of Completions: 192
+Number of Gamers: 34899
 Overall Completion Time:
 - 30.0
 - 38.0
 Overall GS: 1545
-Overall Ratio: 3.5158576051779935
-Overall TA: 5432
+Overall Ratio: 3.4168284789644012
+Overall TA: 5279
 PDU: 0
-Percentage Completed: 0.48
+Percentage Completed: 0.55
 Publisher: Bethesda Softworks
 Release Date: 01 December 2020
 Server Closure: false
@@ -608,10 +608,10 @@ Update Achievements:
   Description: Complete the first Horde Mode Mission
   GS: '15'
   Guide: false
-  Number of Gamers: 1182
+  Number of Gamers: 1396
   Percentage of Gamers: 4%
-  Ratio: 5.16
-  TA: '77'
+  Ratio: 4.99
+  TA: '74'
   Tags:
   - Offline Mode
   - Single Player
@@ -620,10 +620,10 @@ Update Achievements:
   Description: Re-collect all of the weapons on the Weapon Wheel
   GS: '15'
   Guide: true
-  Number of Gamers: 701
+  Number of Gamers: 834
   Percentage of Gamers: 2%
-  Ratio: 6.71
-  TA: '100'
+  Ratio: 6.46
+  TA: '97'
   Tags:
   - Offline Mode
   - Single Player
@@ -632,10 +632,10 @@ Update Achievements:
   Description: Beat Horde Mode
   GS: '15'
   Guide: false
-  Number of Gamers: 527
+  Number of Gamers: 635
   Percentage of Gamers: 2%
-  Ratio: 7.74
-  TA: '116'
+  Ratio: 7.41
+  TA: '111'
   Tags:
   - Offline Mode
   - Single Player
